--- a/Prevu.Localization/Properties/Resources.ar.resx
+++ b/Prevu.Localization/Properties/Resources.ar.resx
@@ -1840,7 +1840,7 @@
     <value>لم يتم إعادة تعيين منطقة Estop (مع كل Estop Pbs موافق)</value>
   </data>
   <data name="SYS - E-STOP - MASTER RELAY STATUS" xml:space="preserve">
-    <value>Sys - E-Stop - حالة الترحيل الرئيسي</value>
+    <value>SYS - E-Stop - حالة الترحيل الرئيسي</value>
   </data>
   <data name="OK FOR PROCESS (ESTOP AREA STATUS OK + NO ALARMS/MESSAGES)" xml:space="preserve">
     <value>حسنًا للمعالجة (حالة منطقة التوقف جيدة + لا توجد إنذارات / رسائل)</value>
@@ -1864,16 +1864,16 @@
     <value>إعادة تعيين مرحل الإيقاف في حالات الطوارئ طيب (مباشر) (من منطقة Estop هذه)</value>
   </data>
   <data name="SYS - DIGITAL INPUTS" xml:space="preserve">
-    <value>Sys - المدخلات الرقمية</value>
+    <value>SYS - المدخلات الرقمية</value>
   </data>
   <data name="SYS - DIGITAL OUTPUTS" xml:space="preserve">
-    <value>Sys - المخرجات الرقمية</value>
+    <value>SYS - المخرجات الرقمية</value>
   </data>
   <data name="SYS - INTERNAL DEVICES" xml:space="preserve">
-    <value>Sys - الأجهزة الداخلية</value>
+    <value>SYS - الأجهزة الداخلية</value>
   </data>
   <data name="SYS - EXTERNAL DEVICES" xml:space="preserve">
-    <value>Sys - الأجهزة الخارجية</value>
+    <value>SYS - الأجهزة الخارجية</value>
   </data>
   <data name="ETHERNET SWITCH OK" xml:space="preserve">
     <value>تبديل إيثرنت طيب</value>
@@ -5990,5 +5990,155 @@
   </data>
   <data name="MINIMUM TEMPERATURE FOR PROCESS" xml:space="preserve">
     <value>الحد الأدنى لدرجة الحرارة للعملية</value>
+  </data>
+  <data name="NO REVERSE FOR TIME" xml:space="preserve">
+    <value>لا عكس للوقت</value>
+  </data>
+  <data name="REVERSE FOR MAXIMUM FORWARD TIME" xml:space="preserve">
+    <value>عكس الحد الأقصى لوقت التوجيه</value>
+  </data>
+  <data name="EXTERNAL PUMP NOT RUNNING" xml:space="preserve">
+    <value>المضخة الخارجية لا تعمل</value>
+  </data>
+  <data name="NOT RESTARTING" xml:space="preserve">
+    <value>عدم إعادة التشغيل</value>
+  </data>
+  <data name="RESTART CYCLE IN PROGRESS" xml:space="preserve">
+    <value>إعادة تشغيل الدورة قيد التقدم</value>
+  </data>
+  <data name="WATER TREATMENT" xml:space="preserve">
+    <value>معالجة المياه</value>
+  </data>
+  <data name="EXTERNAL WATER COLLECTOR/TRATMENT NOT OK" xml:space="preserve">
+    <value>جامع المياه الخارجي/tratment ليس على ما يرام</value>
+  </data>
+  <data name="PRODUCTION SPEED WITH LEVEL &gt;= MAXIMUM" xml:space="preserve">
+    <value>سرعة الإنتاج مع المستوى&gt; = الحد الأقصى</value>
+  </data>
+  <data name="PRODUCTION SPEED WITH LEVEL &lt; MAXIMUM" xml:space="preserve">
+    <value>سرعة الإنتاج مع المستوى &lt;الحد الأقصى</value>
+  </data>
+  <data name="HIGH LEVEL" xml:space="preserve">
+    <value>مستوى عال</value>
+  </data>
+  <data name="PIT EMPTY" xml:space="preserve">
+    <value>حفرة فارغة</value>
+  </data>
+  <data name="PIT NOT FULL" xml:space="preserve">
+    <value>حفرة ليست ممتلئة</value>
+  </data>
+  <data name="PIT FULL" xml:space="preserve">
+    <value>حفرة كاملة</value>
+  </data>
+  <data name="PIT NOT EMPTY" xml:space="preserve">
+    <value>حفرة ليست فارغة</value>
+  </data>
+  <data name="DOWNSTREAM SAFETY NOT OK TO" xml:space="preserve">
+    <value>السلامة في اتجاه مجرى النهر لا بأس بذلك</value>
+  </data>
+  <data name="LEVEL OK FOR PROCESS" xml:space="preserve">
+    <value>مستوى موافق للعملية</value>
+  </data>
+  <data name="SEPARATION TANK LEVEL NOT OK FOR RUN" xml:space="preserve">
+    <value>مستوى خزان الفصل ليس موافق للتشغيل</value>
+  </data>
+  <data name="SEPARATION TANK REFILL SPEED" xml:space="preserve">
+    <value>سرعة إعادة ملء خزان الفصل</value>
+  </data>
+  <data name="PREPARATION SPEED" xml:space="preserve">
+    <value>سرعة التحضير</value>
+  </data>
+  <data name="CONTROL MODE" xml:space="preserve">
+    <value>وضع التحكم</value>
+  </data>
+  <data name="AUTO" xml:space="preserve">
+    <value>آلي</value>
+  </data>
+  <data name="SEMI-AUTO" xml:space="preserve">
+    <value>شبه</value>
+  </data>
+  <data name="NO CONTINUOUS FILLING" xml:space="preserve">
+    <value>لا ملء مستمر</value>
+  </data>
+  <data name="DOWNSTREAM NOT OK - FILLING MODE CONTINUOUS" xml:space="preserve">
+    <value>أسفل مجرى النهر - وضع التعبئة مستمر</value>
+  </data>
+  <data name="NO LEVEL-STEP FILLING" xml:space="preserve">
+    <value>لا يوجد ملء خطوة المستوى</value>
+  </data>
+  <data name="DOWNSTREAM NOT OK - FILLING MODE STEP AT LEVEL" xml:space="preserve">
+    <value>أسفل مجرى النهر لا بأس - خطوة وضع التعبئة على المستوى</value>
+  </data>
+  <data name="EXIT LEVEL OK" xml:space="preserve">
+    <value>مستوى الخروج موافق</value>
+  </data>
+  <data name="BUFFER EXIT LEVEL NOT OK" xml:space="preserve">
+    <value>مستوى خروج المخزن المؤقت ليس على ما يرام</value>
+  </data>
+  <data name="BUFFER OK FOR LOADING" xml:space="preserve">
+    <value>عازلة موافق للتحميل</value>
+  </data>
+  <data name="BUFFER BELT ENABLED" xml:space="preserve">
+    <value>تمكين حزام المخزن المؤقت</value>
+  </data>
+  <data name="BUFFER BELT NOT ENABLED" xml:space="preserve">
+    <value>حزام المخزن المؤقت غير ممكّن</value>
+  </data>
+  <data name="OPERATING MODE OPTIONS" xml:space="preserve">
+    <value>خيارات وضع التشغيل</value>
+  </data>
+  <data name="CONTINUOUS MODE" xml:space="preserve">
+    <value>الوضع المستمر</value>
+  </data>
+  <data name="STEP FORWARD AT MAXIMUM LEVEL" xml:space="preserve">
+    <value>خطوة إلى الأمام في أقصى مستوى</value>
+  </data>
+  <data name="STOP IF DOWNSTREAM OFF" xml:space="preserve">
+    <value>توقف إذا توقف عن المصب</value>
+  </data>
+  <data name="STOP BUFFER DISCHARGE" xml:space="preserve">
+    <value>وقف التفريغ العازلة</value>
+  </data>
+  <data name="RESTART BUFFER DISCHARGE" xml:space="preserve">
+    <value>إعادة تشغيل التفريغ العازلة</value>
+  </data>
+  <data name="EMPTY LEVEL FOR BUFFER FILLING MODE" xml:space="preserve">
+    <value>مستوى فارغ لوضع ملء المخزن المؤقت</value>
+  </data>
+  <data name="LOADING DEVICE STATUS OK (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>تحميل حالة الجهاز موافق (إشارة خارجية)</value>
+  </data>
+  <data name="(1=EXT DEVICE STATUS OK)" xml:space="preserve">
+    <value>(1 = حالة جهاز EXT موافق)</value>
+  </data>
+  <data name="LOADING DEVICE RUNNING (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>تشغيل جهاز التحميل (إشارة خارجية)</value>
+  </data>
+  <data name="(1=EXT DEVICE RUNNING)" xml:space="preserve">
+    <value>(1 = تشغيل جهاز Ext)</value>
+  </data>
+  <data name="SOREMA IS OK TO RECEIVE MATERIAL" xml:space="preserve">
+    <value>سوريما على ما يرام لتلقي المواد</value>
+  </data>
+  <data name="EXTERNAL LOADING DEVICE IS NOT OK" xml:space="preserve">
+    <value>جهاز التحميل الخارجي ليس على ما يرام</value>
+  </data>
+  <data name="EXTERNAL LOADING IS NOT RUNNING" xml:space="preserve">
+    <value>التحميل الخارجي لا يعمل</value>
+  </data>
+  <data name="EXT LOADING ON" xml:space="preserve">
+    <value>تحويلة التحميل على</value>
+  </data>
+  <data name="SYS - BEACON - LAMP ALARM" xml:space="preserve">
+    <value>SYS - منارة - إنذار المصباح</value>
+  </data>
+  <data name="SYS - BEACON - SIREN" xml:space="preserve">
+    <value>SYS - منارة - صفارات الإنذار</value>
+  </data>
+  <data name="SYS - BEACON - LAMP PRODUCTION" xml:space="preserve">
+    <value>SYS - منارة - إنتاج المصباح</value>
+  </data>
+  <data name="SYS - BEACON - LAMP WARNING" xml:space="preserve">
+    <value>SYS - منارة - تحذير المصباح</value>
   </data>
 </root>
