--- a/Prevu.Localization/Properties/Resources.de.resx
+++ b/Prevu.Localization/Properties/Resources.de.resx
@@ -1843,7 +1843,7 @@
     <value>Estop-Bereich nicht zurückgesetzt (mit allen Estop-Pbs in Ordnung)</value>
   </data>
   <data name="SYS - E-STOP - MASTER RELAY STATUS" xml:space="preserve">
-    <value>Sys - E-Stop - Hauptrelaisstatus</value>
+    <value>SYS - E-Stop - Hauptrelaisstatus</value>
   </data>
   <data name="OK FOR PROCESS (ESTOP AREA STATUS OK + NO ALARMS/MESSAGES)" xml:space="preserve">
     <value>OK für Prozess (Status des Stoppbereichs OK + keine Alarme/Meldungen)</value>
@@ -1867,16 +1867,16 @@
     <value>Not-Aus-Relais-Reset OK (direkt) (dieses Haltebereichs)</value>
   </data>
   <data name="SYS - DIGITAL INPUTS" xml:space="preserve">
-    <value>Sys - Digitale Eingänge</value>
+    <value>SYS - Digitale Eingänge</value>
   </data>
   <data name="SYS - DIGITAL OUTPUTS" xml:space="preserve">
-    <value>Sys - Digitale Ausgänge</value>
+    <value>SYS - Digitale Ausgänge</value>
   </data>
   <data name="SYS - INTERNAL DEVICES" xml:space="preserve">
-    <value>Sys - Interne Geräte</value>
+    <value>SYS - Interne Geräte</value>
   </data>
   <data name="SYS - EXTERNAL DEVICES" xml:space="preserve">
-    <value>Sys - Externe Geräte</value>
+    <value>SYS - Externe Geräte</value>
   </data>
   <data name="ETHERNET SWITCH OK" xml:space="preserve">
     <value>Ethernet-Switch in Ordnung</value>
@@ -2611,13 +2611,13 @@
     <value>HMIS Beacon Protection</value>
   </data>
   <data name="SYS - CUMULATIVE HMIS BEACON" xml:space="preserve">
-    <value>Sys - kumulatives HMIS Beacon</value>
+    <value>SYS - kumulatives HMIS Beacon</value>
   </data>
   <data name="SYS - ETHERNET SWITCH OK" xml:space="preserve">
     <value>SYS - Ethernet Switch OK</value>
   </data>
   <data name="SYS - SIREN (FOR EXTERNAL USES)" xml:space="preserve">
-    <value>Sys - Sirene (für externe Verwendungen)</value>
+    <value>SYS - Sirene (für externe Verwendungen)</value>
   </data>
   <data name="SUBZONE SHREDDING" xml:space="preserve">
     <value>Subzone Shredding</value>
@@ -2782,7 +2782,7 @@
     <value>Kabinett auf</value>
   </data>
   <data name="SYS - POWER SUPPLY 24VDC - CABINET ON" xml:space="preserve">
-    <value>Sys - Stromversorgung 24VDC - Schrank auf</value>
+    <value>SYS - Stromversorgung 24VDC - Schrank auf</value>
   </data>
   <data name="ALL ESTOP PB NOT PRESSED (CUMULATIVE OF TO THE ONES THAT BELONG TO THIS CABINET)" xml:space="preserve">
     <value>ALLE ESTOP PB nicht gepresst (kumulativ zu denen, die zu diesem Kabinett gehören)</value>
@@ -3097,7 +3097,7 @@
     <value>24 V unter Estop -Schutz</value>
   </data>
   <data name="SYS - 24V UNDER ESTOP" xml:space="preserve">
-    <value>Sys - 24 V unter Estop</value>
+    <value>SYS - 24 V unter Estop</value>
   </data>
   <data name="INVERTER SAFETY CIRCUITS" xml:space="preserve">
     <value>Wechselrichter Sicherheitsschaltungen</value>
@@ -3109,7 +3109,7 @@
     <value>Hydraulikventilschutz</value>
   </data>
   <data name="SYS - 24V UNDER ESTOP FOR HYDRAULIC VALVES" xml:space="preserve">
-    <value>Sys - 24 V unter Estop für hydraulische Klappen</value>
+    <value>SYS - 24 V unter Estop für hydraulische Klappen</value>
   </data>
   <data name="AUXILIARY TRANSFORMER PRIMARY PROTECTION" xml:space="preserve">
     <value>Hilfstransformator Primärschutz</value>
@@ -3880,10 +3880,10 @@
     <value>Position in der Produktion</value>
   </data>
   <data name="SYS - TV1 - TR Primary" xml:space="preserve">
-    <value>Sys - TV1 - TR Primary</value>
+    <value>SYS - TV1 - TR Primary</value>
   </data>
   <data name="SYS - TV1 - TR Secondary" xml:space="preserve">
-    <value>Sys - TV1 - TR Sekundär</value>
+    <value>SYS - TV1 - TR Sekundär</value>
   </data>
   <data name="OVERLOAD ANALOG INPUT" xml:space="preserve">
     <value>Analogeingabe überlasten</value>
@@ -5990,5 +5990,155 @@
   </data>
   <data name="MINIMUM TEMPERATURE FOR PROCESS" xml:space="preserve">
     <value>Mindesttemperatur für den Prozess</value>
+  </data>
+  <data name="NO REVERSE FOR TIME" xml:space="preserve">
+    <value>Kein Rückwärtsgang für die Zeit</value>
+  </data>
+  <data name="REVERSE FOR MAXIMUM FORWARD TIME" xml:space="preserve">
+    <value>Umgekehrt für die maximale Vorwärtszeit umgekehrt</value>
+  </data>
+  <data name="EXTERNAL PUMP NOT RUNNING" xml:space="preserve">
+    <value>Externe Pumpe nicht laufen</value>
+  </data>
+  <data name="NOT RESTARTING" xml:space="preserve">
+    <value>Nicht neu starten</value>
+  </data>
+  <data name="RESTART CYCLE IN PROGRESS" xml:space="preserve">
+    <value>Starten Sie den Zyklus neu</value>
+  </data>
+  <data name="WATER TREATMENT" xml:space="preserve">
+    <value>Wasserversorgung</value>
+  </data>
+  <data name="EXTERNAL WATER COLLECTOR/TRATMENT NOT OK" xml:space="preserve">
+    <value>Externer Wassersammler/Verschwendung nicht in Ordnung</value>
+  </data>
+  <data name="PRODUCTION SPEED WITH LEVEL &gt;= MAXIMUM" xml:space="preserve">
+    <value>Produktionsgeschwindigkeit mit Level&gt; = maximal</value>
+  </data>
+  <data name="PRODUCTION SPEED WITH LEVEL &lt; MAXIMUM" xml:space="preserve">
+    <value>Produktionsgeschwindigkeit mit Level &lt;maximal</value>
+  </data>
+  <data name="HIGH LEVEL" xml:space="preserve">
+    <value>Hohes Level</value>
+  </data>
+  <data name="PIT EMPTY" xml:space="preserve">
+    <value>Grube leer</value>
+  </data>
+  <data name="PIT NOT FULL" xml:space="preserve">
+    <value>Grube nicht voll</value>
+  </data>
+  <data name="PIT FULL" xml:space="preserve">
+    <value>Grube voll</value>
+  </data>
+  <data name="PIT NOT EMPTY" xml:space="preserve">
+    <value>Grube nicht leer</value>
+  </data>
+  <data name="DOWNSTREAM SAFETY NOT OK TO" xml:space="preserve">
+    <value>Nachgeschaltete Sicherheit nicht in Ordnung zu</value>
+  </data>
+  <data name="LEVEL OK FOR PROCESS" xml:space="preserve">
+    <value>Ebene OK für den Prozess</value>
+  </data>
+  <data name="SEPARATION TANK LEVEL NOT OK FOR RUN" xml:space="preserve">
+    <value>Trennungspanzerspiegel nicht in Ordnung für den Lauf</value>
+  </data>
+  <data name="SEPARATION TANK REFILL SPEED" xml:space="preserve">
+    <value>Trennbehälter -Nachfüllgeschwindigkeit</value>
+  </data>
+  <data name="PREPARATION SPEED" xml:space="preserve">
+    <value>Vorbereitungsgeschwindigkeit</value>
+  </data>
+  <data name="CONTROL MODE" xml:space="preserve">
+    <value>Steuermodus</value>
+  </data>
+  <data name="AUTO" xml:space="preserve">
+    <value>Auto</value>
+  </data>
+  <data name="SEMI-AUTO" xml:space="preserve">
+    <value>Semi-automatisch</value>
+  </data>
+  <data name="NO CONTINUOUS FILLING" xml:space="preserve">
+    <value>Keine kontinuierliche Füllung</value>
+  </data>
+  <data name="DOWNSTREAM NOT OK - FILLING MODE CONTINUOUS" xml:space="preserve">
+    <value>Nachgeschalteter nicht ok - Füllmodus kontinuierlich</value>
+  </data>
+  <data name="NO LEVEL-STEP FILLING" xml:space="preserve">
+    <value>Keine Level-Schritt-Füllung</value>
+  </data>
+  <data name="DOWNSTREAM NOT OK - FILLING MODE STEP AT LEVEL" xml:space="preserve">
+    <value>Nachgeschalteter nicht ok - Füllmodusschritt auf der Ebene</value>
+  </data>
+  <data name="EXIT LEVEL OK" xml:space="preserve">
+    <value>Beendenstufe OK</value>
+  </data>
+  <data name="BUFFER EXIT LEVEL NOT OK" xml:space="preserve">
+    <value>Puffer -Beenden -Level nicht in Ordnung</value>
+  </data>
+  <data name="BUFFER OK FOR LOADING" xml:space="preserve">
+    <value>Puffer OK zum Laden</value>
+  </data>
+  <data name="BUFFER BELT ENABLED" xml:space="preserve">
+    <value>Puffergürtel aktiviert</value>
+  </data>
+  <data name="BUFFER BELT NOT ENABLED" xml:space="preserve">
+    <value>Pufferriemen nicht aktiviert</value>
+  </data>
+  <data name="OPERATING MODE OPTIONS" xml:space="preserve">
+    <value>Betriebsmodusoptionen</value>
+  </data>
+  <data name="CONTINUOUS MODE" xml:space="preserve">
+    <value>Kontinuierlicher Modus</value>
+  </data>
+  <data name="STEP FORWARD AT MAXIMUM LEVEL" xml:space="preserve">
+    <value>Treten Sie auf maximaler Ebene nach vorne nach vorne</value>
+  </data>
+  <data name="STOP IF DOWNSTREAM OFF" xml:space="preserve">
+    <value>Stoppen Sie, wenn Sie nachgelagert werden</value>
+  </data>
+  <data name="STOP BUFFER DISCHARGE" xml:space="preserve">
+    <value>Pufferentladung stoppen</value>
+  </data>
+  <data name="RESTART BUFFER DISCHARGE" xml:space="preserve">
+    <value>Starten Sie die Pufferentladung neu</value>
+  </data>
+  <data name="EMPTY LEVEL FOR BUFFER FILLING MODE" xml:space="preserve">
+    <value>Leere Ebene für den Pufferfüllmodus</value>
+  </data>
+  <data name="LOADING DEVICE STATUS OK (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Ladegerätestatus OK (externes Signal)</value>
+  </data>
+  <data name="(1=EXT DEVICE STATUS OK)" xml:space="preserve">
+    <value>(1 = Status des Geräts OK)</value>
+  </data>
+  <data name="LOADING DEVICE RUNNING (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Ladevorrichtung laufend (externes Signal)</value>
+  </data>
+  <data name="(1=EXT DEVICE RUNNING)" xml:space="preserve">
+    <value>(1 = Ext -Gerät ausgeführt)</value>
+  </data>
+  <data name="SOREMA IS OK TO RECEIVE MATERIAL" xml:space="preserve">
+    <value>Sorema ist in Ordnung, um Material zu erhalten</value>
+  </data>
+  <data name="EXTERNAL LOADING DEVICE IS NOT OK" xml:space="preserve">
+    <value>Das externe Ladegerät ist nicht in Ordnung</value>
+  </data>
+  <data name="EXTERNAL LOADING IS NOT RUNNING" xml:space="preserve">
+    <value>Die externe Belastung läuft nicht</value>
+  </data>
+  <data name="EXT LOADING ON" xml:space="preserve">
+    <value>Ext -Ladung eingeschaltet</value>
+  </data>
+  <data name="SYS - BEACON - LAMP ALARM" xml:space="preserve">
+    <value>SYS - Beacon - Lampenalarm</value>
+  </data>
+  <data name="SYS - BEACON - SIREN" xml:space="preserve">
+    <value>SYS - Beacon - Sirene</value>
+  </data>
+  <data name="SYS - BEACON - LAMP PRODUCTION" xml:space="preserve">
+    <value>SYS - Beacon - Lampenproduktion</value>
+  </data>
+  <data name="SYS - BEACON - LAMP WARNING" xml:space="preserve">
+    <value>SYS - Beacon - Lampenwarnung</value>
   </data>
 </root>
