--- a/Prevu.Localization/Properties/Resources.es.resx
+++ b/Prevu.Localization/Properties/Resources.es.resx
@@ -1957,7 +1957,7 @@
     <value>Área De Estop No Reiniciada (Con Todos Los Pbs De Estop Correctos)</value>
   </data>
   <data name="SYS - E-STOP - MASTER RELAY STATUS" xml:space="preserve">
-    <value>Sys - E-Stop - Estado Del Relé Maestro</value>
+    <value>SYS - E-Stop - Estado Del Relé Maestro</value>
   </data>
   <data name="OK FOR PROCESS (ESTOP AREA STATUS OK + NO ALARMS/MESSAGES)" xml:space="preserve">
     <value>Ok Para Proceso (Estado De Área De Parada Ok + Sin Alarmas/Mensajes)</value>
@@ -1987,10 +1987,10 @@
     <value>Sistema - Salidas Digitales</value>
   </data>
   <data name="SYS - INTERNAL DEVICES" xml:space="preserve">
-    <value>Sys - Dispositivos Internos</value>
+    <value>SYS - Dispositivos Internos</value>
   </data>
   <data name="SYS - EXTERNAL DEVICES" xml:space="preserve">
-    <value>Sys - Dispositivos Externos</value>
+    <value>SYS - Dispositivos Externos</value>
   </data>
   <data name="ETHERNET SWITCH OK" xml:space="preserve">
     <value>Conmutador Ethernet Bien</value>
@@ -2611,13 +2611,13 @@
     <value>Protección De Baliza De Hmis</value>
   </data>
   <data name="SYS - CUMULATIVE HMIS BEACON" xml:space="preserve">
-    <value>Sys - Cumulative Hmis Beacon</value>
+    <value>SYS - Cumulative Hmis Beacon</value>
   </data>
   <data name="SYS - ETHERNET SWITCH OK" xml:space="preserve">
-    <value>Sys - Switch Ethernet Ok</value>
+    <value>SYS - Switch Ethernet Ok</value>
   </data>
   <data name="SYS - SIREN (FOR EXTERNAL USES)" xml:space="preserve">
-    <value>Sys - Siren (Para Usos Externos)</value>
+    <value>SYS - Siren (Para Usos Externos)</value>
   </data>
   <data name="SUBZONE SHREDDING" xml:space="preserve">
     <value>Trituración De Subzona</value>
@@ -2782,7 +2782,7 @@
     <value>Gabinete</value>
   </data>
   <data name="SYS - POWER SUPPLY 24VDC - CABINET ON" xml:space="preserve">
-    <value>Sys - Fuente De Alimentación 24 Vcc - Gabinete En</value>
+    <value>SYS - Fuente De Alimentación 24 Vcc - Gabinete En</value>
   </data>
   <data name="ALL ESTOP PB NOT PRESSED (CUMULATIVE OF TO THE ONES THAT BELONG TO THIS CABINET)" xml:space="preserve">
     <value>Todos Los Estopes Pb No Presionados (Acumulativos De Los Que Pertenecen A Este Gabinete)</value>
@@ -2962,22 +2962,22 @@
     <value>Protección De Entradas Analógicas</value>
   </data>
   <data name="SYS - ANALOG INPUTS" xml:space="preserve">
-    <value>Sys - Entradas Analógicas</value>
+    <value>SYS - Entradas Analógicas</value>
   </data>
   <data name="SYS - SIGNALLING HMI BEACON" xml:space="preserve">
-    <value>Sys - Señalización De Hmi Beacon</value>
+    <value>SYS - Señalización De Hmi Beacon</value>
   </data>
   <data name="COOLING SYSTEM OVERLOAD PROTECTION" xml:space="preserve">
     <value>Protección Contra Sobrecarga Del Sistema De Enfriamiento</value>
   </data>
   <data name="SYS - CABINET COOLING SYSTEM OVERLOAD" xml:space="preserve">
-    <value>Sys - Sobrecarga Del Sistema De Enfriamiento Del Gabinete</value>
+    <value>SYS - Sobrecarga Del Sistema De Enfriamiento Del Gabinete</value>
   </data>
   <data name="COOLING SYSTEM HEALTY" xml:space="preserve">
     <value>Sistema De Enfriamiento Curativo</value>
   </data>
   <data name="SYS - AIR CONDITIONING UNIT STATUS" xml:space="preserve">
-    <value>Sys - Estado De La Unidad De Acondicionamiento De Aire Acondicionado</value>
+    <value>SYS - Estado De La Unidad De Acondicionamiento De Aire Acondicionado</value>
   </data>
   <data name="(1=NO ALARMS)" xml:space="preserve">
     <value>(1 = Sin Alarmas)</value>
@@ -2986,22 +2986,22 @@
     <value>Molestar</value>
   </data>
   <data name="SYS - E-STOP - RELAY STATUS" xml:space="preserve">
-    <value>Sys - E -Stop - Estado De Retransmisión</value>
+    <value>SYS - E -Stop - Estado De Retransmisión</value>
   </data>
   <data name="ESTOP CHANNEL" xml:space="preserve">
     <value>Canal De Impedimento</value>
   </data>
   <data name="SYS - E-STOP - CONTACTOR FEEDBACK CH1" xml:space="preserve">
-    <value>Sys - E -Stop - Comentarios De Contactor Ch1</value>
+    <value>SYS - E -Stop - Comentarios De Contactor Ch1</value>
   </data>
   <data name="SYS - E-STOP - CONTACTOR FEEDBACK CH2" xml:space="preserve">
-    <value>Sys - E -Stop - Comentarios De Contactor Ch2</value>
+    <value>SYS - E -Stop - Comentarios De Contactor Ch2</value>
   </data>
   <data name="EMERGENCY PUSH BUTTON ON CABINET" xml:space="preserve">
     <value>Botón Push De Emergencia En El Gabinete</value>
   </data>
   <data name="SYS - EMERGENCY PUSH BUTTON" xml:space="preserve">
-    <value>Sys - Botón Push De Emergencia</value>
+    <value>SYS - Botón Push De Emergencia</value>
   </data>
   <data name="EMERGENCY PUSH BUTTON IN FIELD" xml:space="preserve">
     <value>Botón De Presentación De Emergencia En El Campo</value>
@@ -3010,13 +3010,13 @@
     <value>Habilitar El Impedimento De Comando</value>
   </data>
   <data name="SYS - ESTOP RELAY ENABLE" xml:space="preserve">
-    <value>Sys - Habilitar El Relé De Estopas</value>
+    <value>SYS - Habilitar El Relé De Estopas</value>
   </data>
   <data name="COMMAND ESTOP RESET" xml:space="preserve">
     <value>Restablecimiento De Estopas De Comando</value>
   </data>
   <data name="SYS - ESTOP RELAY RESET" xml:space="preserve">
-    <value>Sys - Restablecimiento De Relé De Estopas</value>
+    <value>SYS - Restablecimiento De Relé De Estopas</value>
   </data>
   <data name="LAMP PRODUCTION" xml:space="preserve">
     <value>Producción De Lámparas</value>
@@ -3091,25 +3091,25 @@
     <value>Trituradora En Rotación</value>
   </data>
   <data name="SYS - ANALOG OUTPUTS" xml:space="preserve">
-    <value>Sys - Salidas Analógicas</value>
+    <value>SYS - Salidas Analógicas</value>
   </data>
   <data name="24V UNDER ESTOP PROTECTION" xml:space="preserve">
     <value>24 V Bajo Protección De Estopas</value>
   </data>
   <data name="SYS - 24V UNDER ESTOP" xml:space="preserve">
-    <value>Sys - 24V Bajo Impedimento</value>
+    <value>SYS - 24V Bajo Impedimento</value>
   </data>
   <data name="INVERTER SAFETY CIRCUITS" xml:space="preserve">
     <value>Circuitos De Seguridad Del Inversor</value>
   </data>
   <data name="SYS - INVERTER SAFETY CIRCUITS (STO)" xml:space="preserve">
-    <value>Sys - Circuitos De Seguridad De Inversores (Sto)</value>
+    <value>SYS - Circuitos De Seguridad De Inversores (Sto)</value>
   </data>
   <data name="HYDRAULIC VALVES PROTECTION" xml:space="preserve">
     <value>Protección De Válvulas Hidráulicas</value>
   </data>
   <data name="SYS - 24V UNDER ESTOP FOR HYDRAULIC VALVES" xml:space="preserve">
-    <value>Sys - 24 V Bajo Impedimento Para Válvulas Hidráulicas</value>
+    <value>SYS - 24 V Bajo Impedimento Para Válvulas Hidráulicas</value>
   </data>
   <data name="AUXILIARY TRANSFORMER PRIMARY PROTECTION" xml:space="preserve">
     <value>Protección Primaria Del Transformador Auxiliar</value>
@@ -5990,5 +5990,155 @@
   </data>
   <data name="MINIMUM TEMPERATURE FOR PROCESS" xml:space="preserve">
     <value>Temperatura mínima para el proceso</value>
+  </data>
+  <data name="NO REVERSE FOR TIME" xml:space="preserve">
+    <value>No hay reverso por tiempo</value>
+  </data>
+  <data name="REVERSE FOR MAXIMUM FORWARD TIME" xml:space="preserve">
+    <value>Revertir por tiempo máximo de avance</value>
+  </data>
+  <data name="EXTERNAL PUMP NOT RUNNING" xml:space="preserve">
+    <value>Bomba externa que no se ejecuta</value>
+  </data>
+  <data name="NOT RESTARTING" xml:space="preserve">
+    <value>No reiniciar</value>
+  </data>
+  <data name="RESTART CYCLE IN PROGRESS" xml:space="preserve">
+    <value>Reiniciar el ciclo en progreso</value>
+  </data>
+  <data name="WATER TREATMENT" xml:space="preserve">
+    <value>Tratamiento de aguas</value>
+  </data>
+  <data name="EXTERNAL WATER COLLECTOR/TRATMENT NOT OK" xml:space="preserve">
+    <value>Colector de agua externo/Tratamiento no está bien</value>
+  </data>
+  <data name="PRODUCTION SPEED WITH LEVEL &gt;= MAXIMUM" xml:space="preserve">
+    <value>Velocidad de producción con nivel&gt; = máximo</value>
+  </data>
+  <data name="PRODUCTION SPEED WITH LEVEL &lt; MAXIMUM" xml:space="preserve">
+    <value>Velocidad de producción con nivel &lt;máximo</value>
+  </data>
+  <data name="HIGH LEVEL" xml:space="preserve">
+    <value>Nivel alto</value>
+  </data>
+  <data name="PIT EMPTY" xml:space="preserve">
+    <value>Pozo vacío</value>
+  </data>
+  <data name="PIT NOT FULL" xml:space="preserve">
+    <value>Pit no lleno</value>
+  </data>
+  <data name="PIT FULL" xml:space="preserve">
+    <value>Fosa completa</value>
+  </data>
+  <data name="PIT NOT EMPTY" xml:space="preserve">
+    <value>Pit no vacío</value>
+  </data>
+  <data name="DOWNSTREAM SAFETY NOT OK TO" xml:space="preserve">
+    <value>Seguridad posterior no está bien para</value>
+  </data>
+  <data name="LEVEL OK FOR PROCESS" xml:space="preserve">
+    <value>Nivel OK para el proceso</value>
+  </data>
+  <data name="SEPARATION TANK LEVEL NOT OK FOR RUN" xml:space="preserve">
+    <value>Nivel del tanque de separación no está bien para correr</value>
+  </data>
+  <data name="SEPARATION TANK REFILL SPEED" xml:space="preserve">
+    <value>Velocidad de recarga del tanque de separación</value>
+  </data>
+  <data name="PREPARATION SPEED" xml:space="preserve">
+    <value>Velocidad de preparación</value>
+  </data>
+  <data name="CONTROL MODE" xml:space="preserve">
+    <value>Modo de control</value>
+  </data>
+  <data name="AUTO" xml:space="preserve">
+    <value>Auto</value>
+  </data>
+  <data name="SEMI-AUTO" xml:space="preserve">
+    <value>Semiautomatico</value>
+  </data>
+  <data name="NO CONTINUOUS FILLING" xml:space="preserve">
+    <value>Sin relleno continuo</value>
+  </data>
+  <data name="DOWNSTREAM NOT OK - FILLING MODE CONTINUOUS" xml:space="preserve">
+    <value>Río abajo no está bien - Modo de llenado continuo</value>
+  </data>
+  <data name="NO LEVEL-STEP FILLING" xml:space="preserve">
+    <value>Sin relleno de paso de nivel</value>
+  </data>
+  <data name="DOWNSTREAM NOT OK - FILLING MODE STEP AT LEVEL" xml:space="preserve">
+    <value>Agustream no está bien - Modo de llenado paso al nivel</value>
+  </data>
+  <data name="EXIT LEVEL OK" xml:space="preserve">
+    <value>Nivel de salida OK</value>
+  </data>
+  <data name="BUFFER EXIT LEVEL NOT OK" xml:space="preserve">
+    <value>Nivel de salida del búfer no está bien</value>
+  </data>
+  <data name="BUFFER OK FOR LOADING" xml:space="preserve">
+    <value>Buffer ok para cargar</value>
+  </data>
+  <data name="BUFFER BELT ENABLED" xml:space="preserve">
+    <value>Buffer Belt habilitado</value>
+  </data>
+  <data name="BUFFER BELT NOT ENABLED" xml:space="preserve">
+    <value>Cinturón de búfer no habilitado</value>
+  </data>
+  <data name="OPERATING MODE OPTIONS" xml:space="preserve">
+    <value>Opciones de modo operativo</value>
+  </data>
+  <data name="CONTINUOUS MODE" xml:space="preserve">
+    <value>Modo continuo</value>
+  </data>
+  <data name="STEP FORWARD AT MAXIMUM LEVEL" xml:space="preserve">
+    <value>Dar un paso adelante al nivel máximo</value>
+  </data>
+  <data name="STOP IF DOWNSTREAM OFF" xml:space="preserve">
+    <value>Detente si se abre aguas abajo</value>
+  </data>
+  <data name="STOP BUFFER DISCHARGE" xml:space="preserve">
+    <value>Detener la descarga del búfer</value>
+  </data>
+  <data name="RESTART BUFFER DISCHARGE" xml:space="preserve">
+    <value>Reiniciar la descarga del búfer</value>
+  </data>
+  <data name="EMPTY LEVEL FOR BUFFER FILLING MODE" xml:space="preserve">
+    <value>Nivel vacío para el modo de llenado de búfer</value>
+  </data>
+  <data name="LOADING DEVICE STATUS OK (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Estado del dispositivo de carga OK (señal externa)</value>
+  </data>
+  <data name="(1=EXT DEVICE STATUS OK)" xml:space="preserve">
+    <value>(1 = EXT estado del dispositivo OK)</value>
+  </data>
+  <data name="LOADING DEVICE RUNNING (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Carga del dispositivo que se ejecuta (señal externa)</value>
+  </data>
+  <data name="(1=EXT DEVICE RUNNING)" xml:space="preserve">
+    <value>(1 = Dispositivo EXT en ejecución)</value>
+  </data>
+  <data name="SOREMA IS OK TO RECEIVE MATERIAL" xml:space="preserve">
+    <value>Sorema está bien para recibir material</value>
+  </data>
+  <data name="EXTERNAL LOADING DEVICE IS NOT OK" xml:space="preserve">
+    <value>El dispositivo de carga externo no está bien</value>
+  </data>
+  <data name="EXTERNAL LOADING IS NOT RUNNING" xml:space="preserve">
+    <value>La carga externa no se está ejecutando</value>
+  </data>
+  <data name="EXT LOADING ON" xml:space="preserve">
+    <value>Ext cargando en</value>
+  </data>
+  <data name="SYS - BEACON - LAMP ALARM" xml:space="preserve">
+    <value>SYS - Beacon - Alarma de lámpara</value>
+  </data>
+  <data name="SYS - BEACON - SIREN" xml:space="preserve">
+    <value>SYS - Beacon - Siren</value>
+  </data>
+  <data name="SYS - BEACON - LAMP PRODUCTION" xml:space="preserve">
+    <value>SYS - Beacon - Producción de lámparas</value>
+  </data>
+  <data name="SYS - BEACON - LAMP WARNING" xml:space="preserve">
+    <value>SYS - Beacon - Advertencia de lámpara</value>
   </data>
 </root>
