--- a/Prevu.Localization/Properties/Resources.he.resx
+++ b/Prevu.Localization/Properties/Resources.he.resx
@@ -1957,7 +1957,7 @@
     <value>אזור ה-Estop לא מאופס (עם כל ה-Estop Pbs בסדר)</value>
   </data>
   <data name="SYS - E-STOP - MASTER RELAY STATUS" xml:space="preserve">
-    <value>Sys - E-Stop - סטטוס ממסר מאסטר</value>
+    <value>SYS - E-Stop - סטטוס ממסר מאסטר</value>
   </data>
   <data name="OK FOR PROCESS (ESTOP AREA STATUS OK + NO ALARMS/MESSAGES)" xml:space="preserve">
     <value>אישור לתהליך (סטטוס אזור עצירה אישור + אין התראות/הודעות)</value>
@@ -1981,16 +1981,16 @@
     <value>איפוס ממסר עצירת חירום בסדר (ישיר) (מאזור ההפסקה הזה)</value>
   </data>
   <data name="SYS - DIGITAL INPUTS" xml:space="preserve">
-    <value>Sys - כניסות דיגיטליות</value>
+    <value>SYS - כניסות דיגיטליות</value>
   </data>
   <data name="SYS - DIGITAL OUTPUTS" xml:space="preserve">
-    <value>Sys - יציאות דיגיטליות</value>
+    <value>SYS - יציאות דיגיטליות</value>
   </data>
   <data name="SYS - INTERNAL DEVICES" xml:space="preserve">
-    <value>Sys - התקנים פנימיים</value>
+    <value>SYS - התקנים פנימיים</value>
   </data>
   <data name="SYS - EXTERNAL DEVICES" xml:space="preserve">
-    <value>Sys - התקנים חיצוניים</value>
+    <value>SYS - התקנים חיצוניים</value>
   </data>
   <data name="ETHERNET SWITCH OK" xml:space="preserve">
     <value>מתג Ethernet בסדר</value>
@@ -5990,5 +5990,155 @@
   </data>
   <data name="MINIMUM TEMPERATURE FOR PROCESS" xml:space="preserve">
     <value>טמפרטורה מינימלית לתהליך</value>
+  </data>
+  <data name="NO REVERSE FOR TIME" xml:space="preserve">
+    <value>אין הפוך לזמן</value>
+  </data>
+  <data name="REVERSE FOR MAXIMUM FORWARD TIME" xml:space="preserve">
+    <value>הפוך לזמן קדימה מרבי</value>
+  </data>
+  <data name="EXTERNAL PUMP NOT RUNNING" xml:space="preserve">
+    <value>משאבה חיצונית לא פועלת</value>
+  </data>
+  <data name="NOT RESTARTING" xml:space="preserve">
+    <value>לא להפעיל מחדש</value>
+  </data>
+  <data name="RESTART CYCLE IN PROGRESS" xml:space="preserve">
+    <value>הפעל מחדש את מחזור ההפעלה</value>
+  </data>
+  <data name="WATER TREATMENT" xml:space="preserve">
+    <value>טיפול במים</value>
+  </data>
+  <data name="EXTERNAL WATER COLLECTOR/TRATMENT NOT OK" xml:space="preserve">
+    <value>אספן מים חיצוניים/חרדה לא בסדר</value>
+  </data>
+  <data name="PRODUCTION SPEED WITH LEVEL &gt;= MAXIMUM" xml:space="preserve">
+    <value>מהירות ייצור עם רמה&gt; = מקסימום</value>
+  </data>
+  <data name="PRODUCTION SPEED WITH LEVEL &lt; MAXIMUM" xml:space="preserve">
+    <value>מהירות ייצור עם רמה &lt;מקסימום</value>
+  </data>
+  <data name="HIGH LEVEL" xml:space="preserve">
+    <value>רמה גבוהה</value>
+  </data>
+  <data name="PIT EMPTY" xml:space="preserve">
+    <value>בור ריק</value>
+  </data>
+  <data name="PIT NOT FULL" xml:space="preserve">
+    <value>בור לא מלא</value>
+  </data>
+  <data name="PIT FULL" xml:space="preserve">
+    <value>בור מלא</value>
+  </data>
+  <data name="PIT NOT EMPTY" xml:space="preserve">
+    <value>בור לא ריק</value>
+  </data>
+  <data name="DOWNSTREAM SAFETY NOT OK TO" xml:space="preserve">
+    <value>בטיחות במורד הזרם לא בסדר</value>
+  </data>
+  <data name="LEVEL OK FOR PROCESS" xml:space="preserve">
+    <value>ברמה בסדר לתהליך</value>
+  </data>
+  <data name="SEPARATION TANK LEVEL NOT OK FOR RUN" xml:space="preserve">
+    <value>רמת מיכל ההפרדה לא בסדר לריצה</value>
+  </data>
+  <data name="SEPARATION TANK REFILL SPEED" xml:space="preserve">
+    <value>מהירות מילוי מיכל הפרדה</value>
+  </data>
+  <data name="PREPARATION SPEED" xml:space="preserve">
+    <value>מהירות הכנה</value>
+  </data>
+  <data name="CONTROL MODE" xml:space="preserve">
+    <value>מצב שליטה</value>
+  </data>
+  <data name="AUTO" xml:space="preserve">
+    <value>אוטומטי</value>
+  </data>
+  <data name="SEMI-AUTO" xml:space="preserve">
+    <value>חצי אוטומטי</value>
+  </data>
+  <data name="NO CONTINUOUS FILLING" xml:space="preserve">
+    <value>אין מילוי רציף</value>
+  </data>
+  <data name="DOWNSTREAM NOT OK - FILLING MODE CONTINUOUS" xml:space="preserve">
+    <value>במורד הזרם לא בסדר - מצב מילוי רציף</value>
+  </data>
+  <data name="NO LEVEL-STEP FILLING" xml:space="preserve">
+    <value>אין מילוי שלב ברמה</value>
+  </data>
+  <data name="DOWNSTREAM NOT OK - FILLING MODE STEP AT LEVEL" xml:space="preserve">
+    <value>במורד הזרם לא בסדר - מצב מילוי שלב ברמה</value>
+  </data>
+  <data name="EXIT LEVEL OK" xml:space="preserve">
+    <value>רמת יציאה בסדר</value>
+  </data>
+  <data name="BUFFER EXIT LEVEL NOT OK" xml:space="preserve">
+    <value>רמת יציאת מאגר לא בסדר</value>
+  </data>
+  <data name="BUFFER OK FOR LOADING" xml:space="preserve">
+    <value>חיץ אישור לטעינה</value>
+  </data>
+  <data name="BUFFER BELT ENABLED" xml:space="preserve">
+    <value>חגורת חיץ מופעלת</value>
+  </data>
+  <data name="BUFFER BELT NOT ENABLED" xml:space="preserve">
+    <value>חגורת חיץ לא מופעלת</value>
+  </data>
+  <data name="OPERATING MODE OPTIONS" xml:space="preserve">
+    <value>אפשרויות מצב הפעלה</value>
+  </data>
+  <data name="CONTINUOUS MODE" xml:space="preserve">
+    <value>מצב רציף</value>
+  </data>
+  <data name="STEP FORWARD AT MAXIMUM LEVEL" xml:space="preserve">
+    <value>צעד קדימה ברמה המרבית</value>
+  </data>
+  <data name="STOP IF DOWNSTREAM OFF" xml:space="preserve">
+    <value>עצור אם במורד הזרם</value>
+  </data>
+  <data name="STOP BUFFER DISCHARGE" xml:space="preserve">
+    <value>הפסק פריקה של חיץ</value>
+  </data>
+  <data name="RESTART BUFFER DISCHARGE" xml:space="preserve">
+    <value>הפעל מחדש את הפריקה של חיץ</value>
+  </data>
+  <data name="EMPTY LEVEL FOR BUFFER FILLING MODE" xml:space="preserve">
+    <value>מפלס ריק למצב מילוי חיץ</value>
+  </data>
+  <data name="LOADING DEVICE STATUS OK (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>טעינה סטטוס מכשיר אישור (אות חיצוני)</value>
+  </data>
+  <data name="(1=EXT DEVICE STATUS OK)" xml:space="preserve">
+    <value>(1 = הרחבה סטטוס מכשיר בסדר)</value>
+  </data>
+  <data name="LOADING DEVICE RUNNING (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>מכשיר טעינה פועל (אות חיצוני)</value>
+  </data>
+  <data name="(1=EXT DEVICE RUNNING)" xml:space="preserve">
+    <value>(1 = מכשיר הרחבה פועל)</value>
+  </data>
+  <data name="SOREMA IS OK TO RECEIVE MATERIAL" xml:space="preserve">
+    <value>סורמה בסדר לקבל חומר</value>
+  </data>
+  <data name="EXTERNAL LOADING DEVICE IS NOT OK" xml:space="preserve">
+    <value>מכשיר הטעינה חיצוני אינו בסדר</value>
+  </data>
+  <data name="EXTERNAL LOADING IS NOT RUNNING" xml:space="preserve">
+    <value>העמסה חיצונית אינה פועלת</value>
+  </data>
+  <data name="EXT LOADING ON" xml:space="preserve">
+    <value>הרחבה נטענת על</value>
+  </data>
+  <data name="SYS - BEACON - LAMP ALARM" xml:space="preserve">
+    <value>SYS - משואה - אזעקת מנורה</value>
+  </data>
+  <data name="SYS - BEACON - SIREN" xml:space="preserve">
+    <value>SYS - BEACON - SIREN</value>
+  </data>
+  <data name="SYS - BEACON - LAMP PRODUCTION" xml:space="preserve">
+    <value>SYS - BEACON - ייצור מנורה</value>
+  </data>
+  <data name="SYS - BEACON - LAMP WARNING" xml:space="preserve">
+    <value>SYS - משואה - אזהרת מנורה</value>
   </data>
 </root>
