--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -1957,7 +1957,7 @@
     <value>Area Estop non ripristinata (con tutti i Pbs Estop ok)</value>
   </data>
   <data name="SYS - E-STOP - MASTER RELAY STATUS" xml:space="preserve">
-    <value>Sys - E-Stop - Stato relè principale</value>
+    <value>SYS - E-Stop - Stato relè principale</value>
   </data>
   <data name="OK FOR PROCESS (ESTOP AREA STATUS OK + NO ALARMS/MESSAGES)" xml:space="preserve">
     <value>Ok Per Processo (Stato Area Estop Ok + Nessun Allarmi/Messaggi)</value>
@@ -1981,16 +1981,16 @@
     <value>Reset relè arresto di emergenza OK (diretto) (di questa area di arresto)</value>
   </data>
   <data name="SYS - DIGITAL INPUTS" xml:space="preserve">
-    <value>Sys - Ingressi digitali</value>
+    <value>SYS - Ingressi digitali</value>
   </data>
   <data name="SYS - DIGITAL OUTPUTS" xml:space="preserve">
-    <value>Sys - Uscite digitali</value>
+    <value>SYS - Uscite digitali</value>
   </data>
   <data name="SYS - INTERNAL DEVICES" xml:space="preserve">
-    <value>Sys - Dispositivi interni</value>
+    <value>SYS - Dispositivi interni</value>
   </data>
   <data name="SYS - EXTERNAL DEVICES" xml:space="preserve">
-    <value>Sys - Dispositivi esterni</value>
+    <value>SYS - Dispositivi esterni</value>
   </data>
   <data name="ETHERNET SWITCH OK" xml:space="preserve">
     <value>Commutatore Ethernet ok</value>
@@ -2611,13 +2611,13 @@
     <value>Hmi Beacon Protection</value>
   </data>
   <data name="SYS - CUMULATIVE HMIS BEACON" xml:space="preserve">
-    <value>Sys - Beacon Hmi Cumulativo</value>
+    <value>SYS - Beacon Hmi Cumulativo</value>
   </data>
   <data name="SYS - ETHERNET SWITCH OK" xml:space="preserve">
-    <value>Sys - Interruttore Ethernet Ok</value>
+    <value>SYS - Interruttore Ethernet Ok</value>
   </data>
   <data name="SYS - SIREN (FOR EXTERNAL USES)" xml:space="preserve">
-    <value>Sys - Sirena (Per Usi Esterni)</value>
+    <value>SYS - Sirena (Per Usi Esterni)</value>
   </data>
   <data name="SUBZONE SHREDDING" xml:space="preserve">
     <value>Triturazione Della Sottozona</value>
@@ -2782,7 +2782,7 @@
     <value>Quadro Acceso</value>
   </data>
   <data name="SYS - POWER SUPPLY 24VDC - CABINET ON" xml:space="preserve">
-    <value>Sys - Alimentazione 24Vdc - Quadro Acceso</value>
+    <value>SYS - Alimentazione 24Vdc - Quadro Acceso</value>
   </data>
   <data name="ALL ESTOP PB NOT PRESSED (CUMULATIVE OF TO THE ONES THAT BELONG TO THIS CABINET)" xml:space="preserve">
     <value>Tutti Gli Estop Pb Non Premuti (Cumulativi Di Quelli Appartenenti A Questo Quadro)</value>
@@ -2962,22 +2962,22 @@
     <value>Protezione Ingressi Analogici</value>
   </data>
   <data name="SYS - ANALOG INPUTS" xml:space="preserve">
-    <value>Sys - Ingressi Analogici</value>
+    <value>SYS - Ingressi Analogici</value>
   </data>
   <data name="SYS - SIGNALLING HMI BEACON" xml:space="preserve">
-    <value>Sys - Segnalazione Hmi Beacon</value>
+    <value>SYS - Segnalazione Hmi Beacon</value>
   </data>
   <data name="COOLING SYSTEM OVERLOAD PROTECTION" xml:space="preserve">
     <value>Protezione Da Sovraccarico Del Sistema Di Raffreddamento</value>
   </data>
   <data name="SYS - CABINET COOLING SYSTEM OVERLOAD" xml:space="preserve">
-    <value>Sys - Sovraccarico Del Sistema Di Raffreddamento Delil Quadro</value>
+    <value>SYS - Sovraccarico Del Sistema Di Raffreddamento Delil Quadro</value>
   </data>
   <data name="COOLING SYSTEM HEALTY" xml:space="preserve">
     <value>Sistema Di Raffreddamento Sano</value>
   </data>
   <data name="SYS - AIR CONDITIONING UNIT STATUS" xml:space="preserve">
-    <value>Sys - Stato Dell'Unità Di Condizionamento Dell'Aria</value>
+    <value>SYS - Stato Dell'Unità Di Condizionamento Dell'Aria</value>
   </data>
   <data name="(1=NO ALARMS)" xml:space="preserve">
     <value>(1=Nessun Allarme)</value>
@@ -2986,22 +2986,22 @@
     <value>Fermati</value>
   </data>
   <data name="SYS - E-STOP - RELAY STATUS" xml:space="preserve">
-    <value>Sys - E-Stop - Stato Relè</value>
+    <value>SYS - E-Stop - Stato Relè</value>
   </data>
   <data name="ESTOP CHANNEL" xml:space="preserve">
     <value>Ferma Il Canale</value>
   </data>
   <data name="SYS - E-STOP - CONTACTOR FEEDBACK CH1" xml:space="preserve">
-    <value>Sys - E-Stop - Feedback Contattore Ch1</value>
+    <value>SYS - E-Stop - Feedback Contattore Ch1</value>
   </data>
   <data name="SYS - E-STOP - CONTACTOR FEEDBACK CH2" xml:space="preserve">
-    <value>Sys - E-Stop - Feedback Contattore Ch2</value>
+    <value>SYS - E-Stop - Feedback Contattore Ch2</value>
   </data>
   <data name="EMERGENCY PUSH BUTTON ON CABINET" xml:space="preserve">
     <value>Pulsante Di Emergenza sul Quadro</value>
   </data>
   <data name="SYS - EMERGENCY PUSH BUTTON" xml:space="preserve">
-    <value>Sys - Pulsante Di Emergenza</value>
+    <value>SYS - Pulsante Di Emergenza</value>
   </data>
   <data name="EMERGENCY PUSH BUTTON IN FIELD" xml:space="preserve">
     <value>Pulsante Di Emergenza In Campo</value>
@@ -3010,13 +3010,13 @@
     <value>Comando Arresto Abilitato</value>
   </data>
   <data name="SYS - ESTOP RELAY ENABLE" xml:space="preserve">
-    <value>Sys - Abilitazione Relè Arresto</value>
+    <value>SYS - Abilitazione Relè Arresto</value>
   </data>
   <data name="COMMAND ESTOP RESET" xml:space="preserve">
     <value>Comando Estop Reset</value>
   </data>
   <data name="SYS - ESTOP RELAY RESET" xml:space="preserve">
-    <value>Sys - Reset Rele' Di Arresto</value>
+    <value>SYS - Reset Rele' Di Arresto</value>
   </data>
   <data name="LAMP PRODUCTION" xml:space="preserve">
     <value>Produzione Di Lampade</value>
@@ -3091,25 +3091,25 @@
     <value>Trituratore In Rotazione</value>
   </data>
   <data name="SYS - ANALOG OUTPUTS" xml:space="preserve">
-    <value>Sys - Uscite Analogiche</value>
+    <value>SYS - Uscite Analogiche</value>
   </data>
   <data name="24V UNDER ESTOP PROTECTION" xml:space="preserve">
     <value>24 V Sotto Protezione Estop</value>
   </data>
   <data name="SYS - 24V UNDER ESTOP" xml:space="preserve">
-    <value>Sys - 24V Sotto Arresto</value>
+    <value>SYS - 24V Sotto Arresto</value>
   </data>
   <data name="INVERTER SAFETY CIRCUITS" xml:space="preserve">
     <value>Circuiti Di Sicurezza Dell'Inverter</value>
   </data>
   <data name="SYS - INVERTER SAFETY CIRCUITS (STO)" xml:space="preserve">
-    <value>Sys - Circuiti Di Sicurezza Inverter (Sto)</value>
+    <value>SYS - Circuiti Di Sicurezza Inverter (Sto)</value>
   </data>
   <data name="HYDRAULIC VALVES PROTECTION" xml:space="preserve">
     <value>Protezione Valvole Idrauliche</value>
   </data>
   <data name="SYS - 24V UNDER ESTOP FOR HYDRAULIC VALVES" xml:space="preserve">
-    <value>Sys - 24V Sotto Arresto Per Valvole Idrauliche</value>
+    <value>SYS - 24V Sotto Arresto Per Valvole Idrauliche</value>
   </data>
   <data name="AUXILIARY TRANSFORMER PRIMARY PROTECTION" xml:space="preserve">
     <value>Protezione Primaria Del Trasformatore Ausiliario</value>
@@ -5990,5 +5990,155 @@
   </data>
   <data name="MINIMUM TEMPERATURE FOR PROCESS" xml:space="preserve">
     <value>Temperatura minima per il processo</value>
+  </data>
+  <data name="NO REVERSE FOR TIME" xml:space="preserve">
+    <value>Nessun retromarcia per il tempo</value>
+  </data>
+  <data name="REVERSE FOR MAXIMUM FORWARD TIME" xml:space="preserve">
+    <value>Invertire per il massimo tempo in avanti</value>
+  </data>
+  <data name="EXTERNAL PUMP NOT RUNNING" xml:space="preserve">
+    <value>Pompa esterna non in esecuzione</value>
+  </data>
+  <data name="NOT RESTARTING" xml:space="preserve">
+    <value>Non riavviare</value>
+  </data>
+  <data name="RESTART CYCLE IN PROGRESS" xml:space="preserve">
+    <value>Riavvia il ciclo in corso</value>
+  </data>
+  <data name="WATER TREATMENT" xml:space="preserve">
+    <value>Trattamento delle acque</value>
+  </data>
+  <data name="EXTERNAL WATER COLLECTOR/TRATMENT NOT OK" xml:space="preserve">
+    <value>Collezionista/tratment di acqua esterna non ok</value>
+  </data>
+  <data name="PRODUCTION SPEED WITH LEVEL &gt;= MAXIMUM" xml:space="preserve">
+    <value>Velocità di produzione con livello&gt; = massimo</value>
+  </data>
+  <data name="PRODUCTION SPEED WITH LEVEL &lt; MAXIMUM" xml:space="preserve">
+    <value>Velocità di produzione con livello &lt;massimo</value>
+  </data>
+  <data name="HIGH LEVEL" xml:space="preserve">
+    <value>Alto livello</value>
+  </data>
+  <data name="PIT EMPTY" xml:space="preserve">
+    <value>Fossa vuota</value>
+  </data>
+  <data name="PIT NOT FULL" xml:space="preserve">
+    <value>Fossa non piena</value>
+  </data>
+  <data name="PIT FULL" xml:space="preserve">
+    <value>Fossa piena</value>
+  </data>
+  <data name="PIT NOT EMPTY" xml:space="preserve">
+    <value>Fossa non vuota</value>
+  </data>
+  <data name="DOWNSTREAM SAFETY NOT OK TO" xml:space="preserve">
+    <value>Sicurezza a valle, non ok</value>
+  </data>
+  <data name="LEVEL OK FOR PROCESS" xml:space="preserve">
+    <value>Livello OK per il processo</value>
+  </data>
+  <data name="SEPARATION TANK LEVEL NOT OK FOR RUN" xml:space="preserve">
+    <value>Livello del serbatoio di separazione non ok per la corsa</value>
+  </data>
+  <data name="SEPARATION TANK REFILL SPEED" xml:space="preserve">
+    <value>Velocità di ricarica del serbatoio di separazione</value>
+  </data>
+  <data name="PREPARATION SPEED" xml:space="preserve">
+    <value>Velocità di preparazione</value>
+  </data>
+  <data name="CONTROL MODE" xml:space="preserve">
+    <value>Modalità di controllo</value>
+  </data>
+  <data name="AUTO" xml:space="preserve">
+    <value>Auto</value>
+  </data>
+  <data name="SEMI-AUTO" xml:space="preserve">
+    <value>Semiautomatico</value>
+  </data>
+  <data name="NO CONTINUOUS FILLING" xml:space="preserve">
+    <value>Nessun riempimento continuo</value>
+  </data>
+  <data name="DOWNSTREAM NOT OK - FILLING MODE CONTINUOUS" xml:space="preserve">
+    <value>A valle non ok - modalità di riempimento continuo</value>
+  </data>
+  <data name="NO LEVEL-STEP FILLING" xml:space="preserve">
+    <value>Nessun riempimento di livello di livello</value>
+  </data>
+  <data name="DOWNSTREAM NOT OK - FILLING MODE STEP AT LEVEL" xml:space="preserve">
+    <value>A valle, non ok - Modalità di riempimento Step a livello</value>
+  </data>
+  <data name="EXIT LEVEL OK" xml:space="preserve">
+    <value>Livello di uscita OK</value>
+  </data>
+  <data name="BUFFER EXIT LEVEL NOT OK" xml:space="preserve">
+    <value>Livello di uscita del buffer non ok</value>
+  </data>
+  <data name="BUFFER OK FOR LOADING" xml:space="preserve">
+    <value>Buffer ok per il caricamento</value>
+  </data>
+  <data name="BUFFER BELT ENABLED" xml:space="preserve">
+    <value>Cintura tampone abilitata</value>
+  </data>
+  <data name="BUFFER BELT NOT ENABLED" xml:space="preserve">
+    <value>Cintura tampone non abilitata</value>
+  </data>
+  <data name="OPERATING MODE OPTIONS" xml:space="preserve">
+    <value>Opzioni in modalità operativa</value>
+  </data>
+  <data name="CONTINUOUS MODE" xml:space="preserve">
+    <value>Modalità continua</value>
+  </data>
+  <data name="STEP FORWARD AT MAXIMUM LEVEL" xml:space="preserve">
+    <value>Passare al livello massimo</value>
+  </data>
+  <data name="STOP IF DOWNSTREAM OFF" xml:space="preserve">
+    <value>Fermati se a valle</value>
+  </data>
+  <data name="STOP BUFFER DISCHARGE" xml:space="preserve">
+    <value>Stop tampone Scarico</value>
+  </data>
+  <data name="RESTART BUFFER DISCHARGE" xml:space="preserve">
+    <value>Riavvia la scarica del tampone</value>
+  </data>
+  <data name="EMPTY LEVEL FOR BUFFER FILLING MODE" xml:space="preserve">
+    <value>Livello vuoto per la modalità di riempimento del buffer</value>
+  </data>
+  <data name="LOADING DEVICE STATUS OK (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Caricamento dello stato del dispositivo OK (segnale esterno)</value>
+  </data>
+  <data name="(1=EXT DEVICE STATUS OK)" xml:space="preserve">
+    <value>(1 = stato del dispositivo ext OK)</value>
+  </data>
+  <data name="LOADING DEVICE RUNNING (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Caricamento del dispositivo in esecuzione (segnale esterno)</value>
+  </data>
+  <data name="(1=EXT DEVICE RUNNING)" xml:space="preserve">
+    <value>(1 = dispositivo ext in esecuzione)</value>
+  </data>
+  <data name="SOREMA IS OK TO RECEIVE MATERIAL" xml:space="preserve">
+    <value>Sorema è ok per ricevere materiale</value>
+  </data>
+  <data name="EXTERNAL LOADING DEVICE IS NOT OK" xml:space="preserve">
+    <value>Il dispositivo di caricamento esterno non è ok</value>
+  </data>
+  <data name="EXTERNAL LOADING IS NOT RUNNING" xml:space="preserve">
+    <value>Il caricamento esterno non è in esecuzione</value>
+  </data>
+  <data name="EXT LOADING ON" xml:space="preserve">
+    <value>Ext Caricamento</value>
+  </data>
+  <data name="SYS - BEACON - LAMP ALARM" xml:space="preserve">
+    <value>SYS - beacon - allarme lampada</value>
+  </data>
+  <data name="SYS - BEACON - SIREN" xml:space="preserve">
+    <value>SYS - beacon - sirena</value>
+  </data>
+  <data name="SYS - BEACON - LAMP PRODUCTION" xml:space="preserve">
+    <value>SYS - beacon - produzione lampada</value>
+  </data>
+  <data name="SYS - BEACON - LAMP WARNING" xml:space="preserve">
+    <value>SYS - Beacon - Avviso lampada</value>
   </data>
 </root>
