--- a/Prevu.Localization/Properties/Resources.pt.resx
+++ b/Prevu.Localization/Properties/Resources.pt.resx
@@ -1990,7 +1990,7 @@
     <value>SYS - Dispositivos internos</value>
   </data>
   <data name="SYS - EXTERNAL DEVICES" xml:space="preserve">
-    <value>Sys - dispositivos externos</value>
+    <value>SYS - dispositivos externos</value>
   </data>
   <data name="ETHERNET SWITCH OK" xml:space="preserve">
     <value>Switch Ethernet OK</value>
@@ -2611,13 +2611,13 @@
     <value>Proteção do Beacon HMIS</value>
   </data>
   <data name="SYS - CUMULATIVE HMIS BEACON" xml:space="preserve">
-    <value>Sys - farol de HMIS cumulativo</value>
+    <value>SYS - farol de HMIS cumulativo</value>
   </data>
   <data name="SYS - ETHERNET SWITCH OK" xml:space="preserve">
-    <value>Sys - interruptor Ethernet OK</value>
+    <value>SYS - interruptor Ethernet OK</value>
   </data>
   <data name="SYS - SIREN (FOR EXTERNAL USES)" xml:space="preserve">
-    <value>Sys - sirene (para usos externos)</value>
+    <value>SYS - sirene (para usos externos)</value>
   </data>
   <data name="SUBZONE SHREDDING" xml:space="preserve">
     <value>Despesas subzona</value>
@@ -2962,10 +2962,10 @@
     <value>Proteção de entradas analógicas</value>
   </data>
   <data name="SYS - ANALOG INPUTS" xml:space="preserve">
-    <value>Sys - entradas analógicas</value>
+    <value>SYS - entradas analógicas</value>
   </data>
   <data name="SYS - SIGNALLING HMI BEACON" xml:space="preserve">
-    <value>Sys - sinalização de sinalização HMI</value>
+    <value>SYS - sinalização de sinalização HMI</value>
   </data>
   <data name="COOLING SYSTEM OVERLOAD PROTECTION" xml:space="preserve">
     <value>Proteção de sobrecarga do sistema de refrigeração</value>
@@ -2986,7 +2986,7 @@
     <value>Impedimento</value>
   </data>
   <data name="SYS - E-STOP - RELAY STATUS" xml:space="preserve">
-    <value>Sys - E -Stop - Status do relé</value>
+    <value>SYS - E -Stop - Status do relé</value>
   </data>
   <data name="ESTOP CHANNEL" xml:space="preserve">
     <value>Canal impedido</value>
@@ -3001,7 +3001,7 @@
     <value>Botão de emergência no gabinete</value>
   </data>
   <data name="SYS - EMERGENCY PUSH BUTTON" xml:space="preserve">
-    <value>Sys - botão de emergência</value>
+    <value>SYS - botão de emergência</value>
   </data>
   <data name="EMERGENCY PUSH BUTTON IN FIELD" xml:space="preserve">
     <value>Botão de emergência em campo</value>
@@ -3016,7 +3016,7 @@
     <value>Redefinição de comando impot</value>
   </data>
   <data name="SYS - ESTOP RELAY RESET" xml:space="preserve">
-    <value>Redefinição de relé Sys - impedimento</value>
+    <value>Redefinição de relé SYS - impedimento</value>
   </data>
   <data name="LAMP PRODUCTION" xml:space="preserve">
     <value>Produção de lâmpadas</value>
@@ -3097,19 +3097,19 @@
     <value>24V sob proteção de imóveis</value>
   </data>
   <data name="SYS - 24V UNDER ESTOP" xml:space="preserve">
-    <value>Sys - 24V sob impedimento</value>
+    <value>SYS - 24V sob impedimento</value>
   </data>
   <data name="INVERTER SAFETY CIRCUITS" xml:space="preserve">
     <value>Circuitos de segurança do inversor</value>
   </data>
   <data name="SYS - INVERTER SAFETY CIRCUITS (STO)" xml:space="preserve">
-    <value>Sys - Circuitos de segurança do inversor (STO)</value>
+    <value>SYS - Circuitos de segurança do inversor (STO)</value>
   </data>
   <data name="HYDRAULIC VALVES PROTECTION" xml:space="preserve">
     <value>Proteção das válvulas hidráulicas</value>
   </data>
   <data name="SYS - 24V UNDER ESTOP FOR HYDRAULIC VALVES" xml:space="preserve">
-    <value>Sys - 24V sob impedimento para válvulas hidráulicas</value>
+    <value>SYS - 24V sob impedimento para válvulas hidráulicas</value>
   </data>
   <data name="AUXILIARY TRANSFORMER PRIMARY PROTECTION" xml:space="preserve">
     <value>Proteção primária do transformador auxiliar</value>
@@ -3883,7 +3883,7 @@
     <value>SYS - TV1 - TR Primary</value>
   </data>
   <data name="SYS - TV1 - TR Secondary" xml:space="preserve">
-    <value>Sys - TV1 - TR secundário</value>
+    <value>SYS - TV1 - TR secundário</value>
   </data>
   <data name="OVERLOAD ANALOG INPUT" xml:space="preserve">
     <value>Sobrecarregar a entrada analógica</value>
@@ -5990,5 +5990,155 @@
   </data>
   <data name="MINIMUM TEMPERATURE FOR PROCESS" xml:space="preserve">
     <value>Temperatura mínima para processo</value>
+  </data>
+  <data name="NO REVERSE FOR TIME" xml:space="preserve">
+    <value>Sem reverso para o tempo</value>
+  </data>
+  <data name="REVERSE FOR MAXIMUM FORWARD TIME" xml:space="preserve">
+    <value>Reverso para o máximo de tempo seguinte</value>
+  </data>
+  <data name="EXTERNAL PUMP NOT RUNNING" xml:space="preserve">
+    <value>Bomba externa não funcionando</value>
+  </data>
+  <data name="NOT RESTARTING" xml:space="preserve">
+    <value>Não reiniciar</value>
+  </data>
+  <data name="RESTART CYCLE IN PROGRESS" xml:space="preserve">
+    <value>Reiniciar o ciclo em andamento</value>
+  </data>
+  <data name="WATER TREATMENT" xml:space="preserve">
+    <value>Tratamento de água</value>
+  </data>
+  <data name="EXTERNAL WATER COLLECTOR/TRATMENT NOT OK" xml:space="preserve">
+    <value>Coletor/Tratamento externo de água não ok</value>
+  </data>
+  <data name="PRODUCTION SPEED WITH LEVEL &gt;= MAXIMUM" xml:space="preserve">
+    <value>Velocidade de produção com nível&gt; = máximo</value>
+  </data>
+  <data name="PRODUCTION SPEED WITH LEVEL &lt; MAXIMUM" xml:space="preserve">
+    <value>Velocidade de produção com nível &lt;máximo</value>
+  </data>
+  <data name="HIGH LEVEL" xml:space="preserve">
+    <value>Alto nível</value>
+  </data>
+  <data name="PIT EMPTY" xml:space="preserve">
+    <value>Poço vazio</value>
+  </data>
+  <data name="PIT NOT FULL" xml:space="preserve">
+    <value>Poço não está cheio</value>
+  </data>
+  <data name="PIT FULL" xml:space="preserve">
+    <value>Poço cheio</value>
+  </data>
+  <data name="PIT NOT EMPTY" xml:space="preserve">
+    <value>Poço não está vazio</value>
+  </data>
+  <data name="DOWNSTREAM SAFETY NOT OK TO" xml:space="preserve">
+    <value>Segurança a jusante não está bem para</value>
+  </data>
+  <data name="LEVEL OK FOR PROCESS" xml:space="preserve">
+    <value>Nível OK para processo</value>
+  </data>
+  <data name="SEPARATION TANK LEVEL NOT OK FOR RUN" xml:space="preserve">
+    <value>Nível do tanque de separação não ok para executar</value>
+  </data>
+  <data name="SEPARATION TANK REFILL SPEED" xml:space="preserve">
+    <value>Velocidade de recarga do tanque de separação</value>
+  </data>
+  <data name="PREPARATION SPEED" xml:space="preserve">
+    <value>Velocidade de preparação</value>
+  </data>
+  <data name="CONTROL MODE" xml:space="preserve">
+    <value>Modo de controle</value>
+  </data>
+  <data name="AUTO" xml:space="preserve">
+    <value>Auto</value>
+  </data>
+  <data name="SEMI-AUTO" xml:space="preserve">
+    <value>Semi automático</value>
+  </data>
+  <data name="NO CONTINUOUS FILLING" xml:space="preserve">
+    <value>Sem preenchimento contínuo</value>
+  </data>
+  <data name="DOWNSTREAM NOT OK - FILLING MODE CONTINUOUS" xml:space="preserve">
+    <value>A jusante não está bem - Modo de enchimento contínuo</value>
+  </data>
+  <data name="NO LEVEL-STEP FILLING" xml:space="preserve">
+    <value>Sem preenchimento de etapa nivelada</value>
+  </data>
+  <data name="DOWNSTREAM NOT OK - FILLING MODE STEP AT LEVEL" xml:space="preserve">
+    <value>A jusante não está bem - Etapa do modo de enchimento no nível</value>
+  </data>
+  <data name="EXIT LEVEL OK" xml:space="preserve">
+    <value>Nível de saída ok</value>
+  </data>
+  <data name="BUFFER EXIT LEVEL NOT OK" xml:space="preserve">
+    <value>Nível de saída buffer não ok</value>
+  </data>
+  <data name="BUFFER OK FOR LOADING" xml:space="preserve">
+    <value>Buffer ok para carregar</value>
+  </data>
+  <data name="BUFFER BELT ENABLED" xml:space="preserve">
+    <value>Correia buffer ativada</value>
+  </data>
+  <data name="BUFFER BELT NOT ENABLED" xml:space="preserve">
+    <value>Correia buffer não habilitada</value>
+  </data>
+  <data name="OPERATING MODE OPTIONS" xml:space="preserve">
+    <value>Opções de modo de operação</value>
+  </data>
+  <data name="CONTINUOUS MODE" xml:space="preserve">
+    <value>Modo contínuo</value>
+  </data>
+  <data name="STEP FORWARD AT MAXIMUM LEVEL" xml:space="preserve">
+    <value>Avançar no nível máximo</value>
+  </data>
+  <data name="STOP IF DOWNSTREAM OFF" xml:space="preserve">
+    <value>Pare se a jusante desligou</value>
+  </data>
+  <data name="STOP BUFFER DISCHARGE" xml:space="preserve">
+    <value>Interromper a descarga do buffer</value>
+  </data>
+  <data name="RESTART BUFFER DISCHARGE" xml:space="preserve">
+    <value>Reinicie a descarga de buffer</value>
+  </data>
+  <data name="EMPTY LEVEL FOR BUFFER FILLING MODE" xml:space="preserve">
+    <value>Nível vazio para o modo de enchimento de buffer</value>
+  </data>
+  <data name="LOADING DEVICE STATUS OK (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Status do dispositivo de carregamento OK (sinal externo)</value>
+  </data>
+  <data name="(1=EXT DEVICE STATUS OK)" xml:space="preserve">
+    <value>(1 = status do dispositivo Ext OK)</value>
+  </data>
+  <data name="LOADING DEVICE RUNNING (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Dispositivo de carregamento em execução (sinal externo)</value>
+  </data>
+  <data name="(1=EXT DEVICE RUNNING)" xml:space="preserve">
+    <value>(1 = Ext Dispositivo em execução)</value>
+  </data>
+  <data name="SOREMA IS OK TO RECEIVE MATERIAL" xml:space="preserve">
+    <value>Sorema está ok para receber material</value>
+  </data>
+  <data name="EXTERNAL LOADING DEVICE IS NOT OK" xml:space="preserve">
+    <value>Dispositivo de carregamento externo não está ok</value>
+  </data>
+  <data name="EXTERNAL LOADING IS NOT RUNNING" xml:space="preserve">
+    <value>O carregamento externo não está funcionando</value>
+  </data>
+  <data name="EXT LOADING ON" xml:space="preserve">
+    <value>Ext carregando</value>
+  </data>
+  <data name="SYS - BEACON - LAMP ALARM" xml:space="preserve">
+    <value>SYS - Beacon - Alarme da lâmpada</value>
+  </data>
+  <data name="SYS - BEACON - SIREN" xml:space="preserve">
+    <value>SYS - beacon - sirene</value>
+  </data>
+  <data name="SYS - BEACON - LAMP PRODUCTION" xml:space="preserve">
+    <value>SYS - Beacon - Produção de lâmpadas</value>
+  </data>
+  <data name="SYS - BEACON - LAMP WARNING" xml:space="preserve">
+    <value>SYS - Beacon - Aviso de Lâmpada</value>
   </data>
 </root>
