--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -1978,7 +1978,7 @@
     <value>Estop Area Not Reset (With All Estop Pbs Ok)</value>
   </data>
   <data name="SYS - E-STOP - MASTER RELAY STATUS" xml:space="preserve">
-    <value>Sys - E-Stop - Master Relay Status</value>
+    <value>SYS - E-Stop - Master Relay Status</value>
   </data>
   <data name="OK FOR PROCESS (ESTOP AREA STATUS OK + NO ALARMS/MESSAGES)" xml:space="preserve">
     <value>Ok For Process (Estop Area Status Ok + No Alarms/Messages)</value>
@@ -2002,16 +2002,16 @@
     <value>Emergency Stop Relay Reset Ok (Direct) (Of This Estop Area)</value>
   </data>
   <data name="SYS - DIGITAL INPUTS" xml:space="preserve">
-    <value>Sys - Digital Inputs</value>
+    <value>SYS - Digital Inputs</value>
   </data>
   <data name="SYS - DIGITAL OUTPUTS" xml:space="preserve">
-    <value>Sys - Digital Outputs</value>
+    <value>SYS - Digital Outputs</value>
   </data>
   <data name="SYS - INTERNAL DEVICES" xml:space="preserve">
-    <value>Sys - Internal Devices</value>
+    <value>SYS - Internal Devices</value>
   </data>
   <data name="SYS - EXTERNAL DEVICES" xml:space="preserve">
-    <value>Sys - External Devices</value>
+    <value>SYS - External Devices</value>
   </data>
   <data name="ETHERNET SWITCH OK" xml:space="preserve">
     <value>Ethernet Switch Ok</value>
@@ -2645,13 +2645,13 @@
     <value>Hmis Beacon Protection</value>
   </data>
   <data name="SYS - CUMULATIVE HMIS BEACON" xml:space="preserve">
-    <value>Sys - Cumulative Hmis Beacon</value>
+    <value>SYS - Cumulative Hmis Beacon</value>
   </data>
   <data name="SYS - ETHERNET SWITCH OK" xml:space="preserve">
-    <value>Sys - Ethernet Switch Ok</value>
+    <value>SYS - Ethernet Switch Ok</value>
   </data>
   <data name="SYS - SIREN (FOR EXTERNAL USES)" xml:space="preserve">
-    <value>Sys - Siren (For External Uses)</value>
+    <value>SYS - Siren (For External Uses)</value>
   </data>
   <data name="SUBZONE SHREDDING" xml:space="preserve">
     <value>Subzone Shredding</value>
@@ -2816,7 +2816,7 @@
     <value>Cabinet On</value>
   </data>
   <data name="SYS - POWER SUPPLY 24VDC - CABINET ON" xml:space="preserve">
-    <value>Sys - Power Supply 24Vdc - Cabinet On</value>
+    <value>SYS - Power Supply 24Vdc - Cabinet On</value>
   </data>
   <data name="ALL ESTOP PB NOT PRESSED (CUMULATIVE OF TO THE ONES THAT BELONG TO THIS CABINET)" xml:space="preserve">
     <value>All Estop Pb Not Pressed (Cumulative Of To The Ones That Belong To This Cabinet)</value>
@@ -2996,22 +2996,22 @@
     <value>Analog Inputs Protection</value>
   </data>
   <data name="SYS - ANALOG INPUTS" xml:space="preserve">
-    <value>Sys - Analog Inputs</value>
+    <value>SYS - Analog Inputs</value>
   </data>
   <data name="SYS - SIGNALLING HMI BEACON" xml:space="preserve">
-    <value>Sys - Signalling Hmi Beacon</value>
+    <value>SYS - Signalling Hmi Beacon</value>
   </data>
   <data name="COOLING SYSTEM OVERLOAD PROTECTION" xml:space="preserve">
     <value>Cooling System Overload Protection</value>
   </data>
   <data name="SYS - CABINET COOLING SYSTEM OVERLOAD" xml:space="preserve">
-    <value>Sys - Cabinet Cooling System Overload</value>
+    <value>SYS - Cabinet Cooling System Overload</value>
   </data>
   <data name="COOLING SYSTEM HEALTY" xml:space="preserve">
     <value>Cooling System Healty</value>
   </data>
   <data name="SYS - AIR CONDITIONING UNIT STATUS" xml:space="preserve">
-    <value>Sys - Air Conditioning Unit Status</value>
+    <value>SYS - Air Conditioning Unit Status</value>
   </data>
   <data name="(1=NO ALARMS)" xml:space="preserve">
     <value>(1=No Alarms)</value>
@@ -3020,22 +3020,22 @@
     <value>Estop</value>
   </data>
   <data name="SYS - E-STOP - RELAY STATUS" xml:space="preserve">
-    <value>Sys - E-Stop - Relay Status</value>
+    <value>SYS - E-Stop - Relay Status</value>
   </data>
   <data name="ESTOP CHANNEL" xml:space="preserve">
     <value>Estop Channel</value>
   </data>
   <data name="SYS - E-STOP - CONTACTOR FEEDBACK CH1" xml:space="preserve">
-    <value>Sys - E-Stop - Contactor Feedback Ch1</value>
+    <value>SYS - E-Stop - Contactor Feedback Ch1</value>
   </data>
   <data name="SYS - E-STOP - CONTACTOR FEEDBACK CH2" xml:space="preserve">
-    <value>Sys - E-Stop - Contactor Feedback Ch2</value>
+    <value>SYS - E-Stop - Contactor Feedback Ch2</value>
   </data>
   <data name="EMERGENCY PUSH BUTTON ON CABINET" xml:space="preserve">
     <value>Emergency Push Button On Cabinet</value>
   </data>
   <data name="SYS - EMERGENCY PUSH BUTTON" xml:space="preserve">
-    <value>Sys - Emergency Push Button</value>
+    <value>SYS - Emergency Push Button</value>
   </data>
   <data name="EMERGENCY PUSH BUTTON IN FIELD" xml:space="preserve">
     <value>Emergency Push Button In Field</value>
@@ -3044,13 +3044,13 @@
     <value>Command Estop Enable</value>
   </data>
   <data name="SYS - ESTOP RELAY ENABLE" xml:space="preserve">
-    <value>Sys - Estop Relay Enable</value>
+    <value>SYS - Estop Relay Enable</value>
   </data>
   <data name="COMMAND ESTOP RESET" xml:space="preserve">
     <value>Command Estop Reset</value>
   </data>
   <data name="SYS - ESTOP RELAY RESET" xml:space="preserve">
-    <value>Sys - Estop Relay Reset</value>
+    <value>SYS - Estop Relay Reset</value>
   </data>
   <data name="LAMP PRODUCTION" xml:space="preserve">
     <value>Lamp Production</value>
@@ -3125,25 +3125,25 @@
     <value>Shredder In Rotation</value>
   </data>
   <data name="SYS - ANALOG OUTPUTS" xml:space="preserve">
-    <value>Sys - Analog Outputs</value>
+    <value>SYS - Analog Outputs</value>
   </data>
   <data name="24V UNDER ESTOP PROTECTION" xml:space="preserve">
     <value>24V Under Estop Protection</value>
   </data>
   <data name="SYS - 24V UNDER ESTOP" xml:space="preserve">
-    <value>Sys - 24V Under Estop</value>
+    <value>SYS - 24V Under Estop</value>
   </data>
   <data name="INVERTER SAFETY CIRCUITS" xml:space="preserve">
     <value>Inverter Safety Circuits</value>
   </data>
   <data name="SYS - INVERTER SAFETY CIRCUITS (STO)" xml:space="preserve">
-    <value>Sys - Inverter Safety Circuits (Sto)</value>
+    <value>SYS - Inverter Safety Circuits (Sto)</value>
   </data>
   <data name="HYDRAULIC VALVES PROTECTION" xml:space="preserve">
     <value>Hydraulic Valves Protection</value>
   </data>
   <data name="SYS - 24V UNDER ESTOP FOR HYDRAULIC VALVES" xml:space="preserve">
-    <value>Sys - 24V Under Estop For Hydraulic Valves</value>
+    <value>SYS - 24V Under Estop For Hydraulic Valves</value>
   </data>
   <data name="AUXILIARY TRANSFORMER PRIMARY PROTECTION" xml:space="preserve">
     <value>Auxiliary Transformer Primary Protection</value>
@@ -6313,5 +6313,155 @@
   </data>
   <data name="MINIMUM TEMPERATURE FOR PROCESS" xml:space="preserve">
     <value>Minimum Temperature For Process</value>
+  </data>
+  <data name="NO REVERSE FOR TIME" xml:space="preserve">
+    <value>No Reverse For Time</value>
+  </data>
+  <data name="REVERSE FOR MAXIMUM FORWARD TIME" xml:space="preserve">
+    <value>Reverse For Maximum Forward Time</value>
+  </data>
+  <data name="EXTERNAL PUMP NOT RUNNING" xml:space="preserve">
+    <value>External Pump Not Running</value>
+  </data>
+  <data name="NOT RESTARTING" xml:space="preserve">
+    <value>Not Restarting</value>
+  </data>
+  <data name="RESTART CYCLE IN PROGRESS" xml:space="preserve">
+    <value>Restart Cycle In Progress</value>
+  </data>
+  <data name="WATER TREATMENT" xml:space="preserve">
+    <value>Water Treatment</value>
+  </data>
+  <data name="EXTERNAL WATER COLLECTOR/TRATMENT NOT OK" xml:space="preserve">
+    <value>External Water Collector/Tratment Not Ok</value>
+  </data>
+  <data name="PRODUCTION SPEED WITH LEVEL &gt;= MAXIMUM" xml:space="preserve">
+    <value>Production Speed With Level &gt;= Maximum</value>
+  </data>
+  <data name="PRODUCTION SPEED WITH LEVEL &lt; MAXIMUM" xml:space="preserve">
+    <value>Production Speed With Level &lt; Maximum</value>
+  </data>
+  <data name="HIGH LEVEL" xml:space="preserve">
+    <value>High Level</value>
+  </data>
+  <data name="PIT EMPTY" xml:space="preserve">
+    <value>Pit Empty</value>
+  </data>
+  <data name="PIT NOT FULL" xml:space="preserve">
+    <value>Pit Not Full</value>
+  </data>
+  <data name="PIT FULL" xml:space="preserve">
+    <value>Pit Full</value>
+  </data>
+  <data name="PIT NOT EMPTY" xml:space="preserve">
+    <value>Pit Not Empty</value>
+  </data>
+  <data name="DOWNSTREAM SAFETY NOT OK TO" xml:space="preserve">
+    <value>Downstream Safety Not Ok To</value>
+  </data>
+  <data name="LEVEL OK FOR PROCESS" xml:space="preserve">
+    <value>Level Ok For Process</value>
+  </data>
+  <data name="SEPARATION TANK LEVEL NOT OK FOR RUN" xml:space="preserve">
+    <value>Separation Tank Level Not Ok For Run</value>
+  </data>
+  <data name="SEPARATION TANK REFILL SPEED" xml:space="preserve">
+    <value>Separation Tank Refill Speed</value>
+  </data>
+  <data name="PREPARATION SPEED" xml:space="preserve">
+    <value>Preparation Speed</value>
+  </data>
+  <data name="CONTROL MODE" xml:space="preserve">
+    <value>Control Mode</value>
+  </data>
+  <data name="AUTO" xml:space="preserve">
+    <value>Auto</value>
+  </data>
+  <data name="SEMI-AUTO" xml:space="preserve">
+    <value>Semi-Auto</value>
+  </data>
+  <data name="NO CONTINUOUS FILLING" xml:space="preserve">
+    <value>No Continuous Filling</value>
+  </data>
+  <data name="DOWNSTREAM NOT OK - FILLING MODE CONTINUOUS" xml:space="preserve">
+    <value>Downstream Not Ok - Filling Mode Continuous</value>
+  </data>
+  <data name="NO LEVEL-STEP FILLING" xml:space="preserve">
+    <value>No Level-Step Filling</value>
+  </data>
+  <data name="DOWNSTREAM NOT OK - FILLING MODE STEP AT LEVEL" xml:space="preserve">
+    <value>Downstream Not Ok - Filling Mode Step At Level</value>
+  </data>
+  <data name="EXIT LEVEL OK" xml:space="preserve">
+    <value>Exit Level Ok</value>
+  </data>
+  <data name="BUFFER EXIT LEVEL NOT OK" xml:space="preserve">
+    <value>Buffer Exit Level Not Ok</value>
+  </data>
+  <data name="BUFFER OK FOR LOADING" xml:space="preserve">
+    <value>Buffer Ok For Loading</value>
+  </data>
+  <data name="BUFFER BELT ENABLED" xml:space="preserve">
+    <value>Buffer Belt Enabled</value>
+  </data>
+  <data name="BUFFER BELT NOT ENABLED" xml:space="preserve">
+    <value>Buffer Belt Not Enabled</value>
+  </data>
+  <data name="OPERATING MODE OPTIONS" xml:space="preserve">
+    <value>Operating Mode Options</value>
+  </data>
+  <data name="CONTINUOUS MODE" xml:space="preserve">
+    <value>Continuous Mode</value>
+  </data>
+  <data name="STEP FORWARD AT MAXIMUM LEVEL" xml:space="preserve">
+    <value>Step Forward At Maximum Level</value>
+  </data>
+  <data name="STOP IF DOWNSTREAM OFF" xml:space="preserve">
+    <value>Stop If Downstream Off</value>
+  </data>
+  <data name="STOP BUFFER DISCHARGE" xml:space="preserve">
+    <value>Stop Buffer Discharge</value>
+  </data>
+  <data name="RESTART BUFFER DISCHARGE" xml:space="preserve">
+    <value>Restart Buffer Discharge</value>
+  </data>
+  <data name="EMPTY LEVEL FOR BUFFER FILLING MODE" xml:space="preserve">
+    <value>Empty Level For Buffer Filling Mode</value>
+  </data>
+  <data name="LOADING DEVICE STATUS OK (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Loading Device Status Ok (External Signal)</value>
+  </data>
+  <data name="(1=EXT DEVICE STATUS OK)" xml:space="preserve">
+    <value>(1=Ext Device Status Ok)</value>
+  </data>
+  <data name="LOADING DEVICE RUNNING (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Loading Device Running (External Signal)</value>
+  </data>
+  <data name="(1=EXT DEVICE RUNNING)" xml:space="preserve">
+    <value>(1=Ext Device Running)</value>
+  </data>
+  <data name="SOREMA IS OK TO RECEIVE MATERIAL" xml:space="preserve">
+    <value>Sorema Is Ok To Receive Material</value>
+  </data>
+  <data name="EXTERNAL LOADING DEVICE IS NOT OK" xml:space="preserve">
+    <value>External Loading Device Is Not Ok</value>
+  </data>
+  <data name="EXTERNAL LOADING IS NOT RUNNING" xml:space="preserve">
+    <value>External Loading Is Not Running</value>
+  </data>
+  <data name="EXT LOADING ON" xml:space="preserve">
+    <value>Ext Loading On</value>
+  </data>
+  <data name="SYS - BEACON - LAMP ALARM" xml:space="preserve">
+    <value>SYS - Beacon - Lamp Alarm</value>
+  </data>
+  <data name="SYS - BEACON - SIREN" xml:space="preserve">
+    <value>SYS - Beacon - Siren</value>
+  </data>
+  <data name="SYS - BEACON - LAMP PRODUCTION" xml:space="preserve">
+    <value>SYS - Beacon - Lamp Production</value>
+  </data>
+  <data name="SYS - BEACON - LAMP WARNING" xml:space="preserve">
+    <value>SYS - Beacon - Lamp Warning</value>
   </data>
 </root>
