--- a/Prevu.Localization/Properties/Resources.ro.resx
+++ b/Prevu.Localization/Properties/Resources.ro.resx
@@ -1981,16 +1981,16 @@
     <value>Resetarea releului de oprire de urgență OK (directă) (din această zonă de estop)</value>
   </data>
   <data name="SYS - DIGITAL INPUTS" xml:space="preserve">
-    <value>Sys - Intrări digitale</value>
+    <value>SYS - Intrări digitale</value>
   </data>
   <data name="SYS - DIGITAL OUTPUTS" xml:space="preserve">
-    <value>Sys - ieșiri digitale</value>
+    <value>SYS - ieșiri digitale</value>
   </data>
   <data name="SYS - INTERNAL DEVICES" xml:space="preserve">
-    <value>Sys - Dispozitive interne</value>
+    <value>SYS - Dispozitive interne</value>
   </data>
   <data name="SYS - EXTERNAL DEVICES" xml:space="preserve">
-    <value>Sys - Dispozitive externe</value>
+    <value>SYS - Dispozitive externe</value>
   </data>
   <data name="ETHERNET SWITCH OK" xml:space="preserve">
     <value>Comutator Ethernet OK</value>
@@ -2611,13 +2611,13 @@
     <value>Protecția împotriva farului HMIS</value>
   </data>
   <data name="SYS - CUMULATIVE HMIS BEACON" xml:space="preserve">
-    <value>Sys - Beacon cumulativ HMIS</value>
+    <value>SYS - Beacon cumulativ HMIS</value>
   </data>
   <data name="SYS - ETHERNET SWITCH OK" xml:space="preserve">
-    <value>Sys - Ethernet Switch OK</value>
+    <value>SYS - Ethernet Switch OK</value>
   </data>
   <data name="SYS - SIREN (FOR EXTERNAL USES)" xml:space="preserve">
-    <value>Sys - Sirena (pentru utilizări externe)</value>
+    <value>SYS - Sirena (pentru utilizări externe)</value>
   </data>
   <data name="SUBZONE SHREDDING" xml:space="preserve">
     <value>Subzone Shredding</value>
@@ -2962,16 +2962,16 @@
     <value>Protecția intrărilor analogice</value>
   </data>
   <data name="SYS - ANALOG INPUTS" xml:space="preserve">
-    <value>Sys - Intrări analogice</value>
+    <value>SYS - Intrări analogice</value>
   </data>
   <data name="SYS - SIGNALLING HMI BEACON" xml:space="preserve">
-    <value>Sys - Semnalizare HMI Beacon</value>
+    <value>SYS - Semnalizare HMI Beacon</value>
   </data>
   <data name="COOLING SYSTEM OVERLOAD PROTECTION" xml:space="preserve">
     <value>Protecția împotriva suprasarcinării sistemului de răcire</value>
   </data>
   <data name="SYS - CABINET COOLING SYSTEM OVERLOAD" xml:space="preserve">
-    <value>Sys - Sistem de răcire a dulapului</value>
+    <value>SYS - Sistem de răcire a dulapului</value>
   </data>
   <data name="COOLING SYSTEM HEALTY" xml:space="preserve">
     <value>Sistemul de răcire vindecat</value>
@@ -2992,16 +2992,16 @@
     <value>Canal estop</value>
   </data>
   <data name="SYS - E-STOP - CONTACTOR FEEDBACK CH1" xml:space="preserve">
-    <value>Sys - E -Stop - Feedback CH1 Contact</value>
+    <value>SYS - E -Stop - Feedback CH1 Contact</value>
   </data>
   <data name="SYS - E-STOP - CONTACTOR FEEDBACK CH2" xml:space="preserve">
-    <value>Sys - E -Stop - Feedback CH2 Contact</value>
+    <value>SYS - E -Stop - Feedback CH2 Contact</value>
   </data>
   <data name="EMERGENCY PUSH BUTTON ON CABINET" xml:space="preserve">
     <value>Buton de apăsare de urgență pe dulap</value>
   </data>
   <data name="SYS - EMERGENCY PUSH BUTTON" xml:space="preserve">
-    <value>Sys - Buton de apăsare de urgență</value>
+    <value>SYS - Buton de apăsare de urgență</value>
   </data>
   <data name="EMERGENCY PUSH BUTTON IN FIELD" xml:space="preserve">
     <value>Buton de apăsare de urgență în câmp</value>
@@ -3016,7 +3016,7 @@
     <value>Resetare estop de comandă</value>
   </data>
   <data name="SYS - ESTOP RELAY RESET" xml:space="preserve">
-    <value>Sys - Resetarea releului estop</value>
+    <value>SYS - Resetarea releului estop</value>
   </data>
   <data name="LAMP PRODUCTION" xml:space="preserve">
     <value>Producția de lampă</value>
@@ -3091,25 +3091,25 @@
     <value>Shredder în rotație</value>
   </data>
   <data name="SYS - ANALOG OUTPUTS" xml:space="preserve">
-    <value>Sys - Ieșiri analogice</value>
+    <value>SYS - Ieșiri analogice</value>
   </data>
   <data name="24V UNDER ESTOP PROTECTION" xml:space="preserve">
     <value>24V sub protecție estop</value>
   </data>
   <data name="SYS - 24V UNDER ESTOP" xml:space="preserve">
-    <value>Sys - 24V sub estop</value>
+    <value>SYS - 24V sub estop</value>
   </data>
   <data name="INVERTER SAFETY CIRCUITS" xml:space="preserve">
     <value>Circuite de siguranță a invertorului</value>
   </data>
   <data name="SYS - INVERTER SAFETY CIRCUITS (STO)" xml:space="preserve">
-    <value>Sys - Circuite de siguranță a invertorului (STO)</value>
+    <value>SYS - Circuite de siguranță a invertorului (STO)</value>
   </data>
   <data name="HYDRAULIC VALVES PROTECTION" xml:space="preserve">
     <value>Protecția supapelor hidraulice</value>
   </data>
   <data name="SYS - 24V UNDER ESTOP FOR HYDRAULIC VALVES" xml:space="preserve">
-    <value>Sys - 24V sub estop pentru valvele hidraulice</value>
+    <value>SYS - 24V sub estop pentru valvele hidraulice</value>
   </data>
   <data name="AUXILIARY TRANSFORMER PRIMARY PROTECTION" xml:space="preserve">
     <value>Transformator auxiliar Protecție primară</value>
@@ -3880,10 +3880,10 @@
     <value>Poziția în producție</value>
   </data>
   <data name="SYS - TV1 - TR Primary" xml:space="preserve">
-    <value>Sys - TV1 - TR primar</value>
+    <value>SYS - TV1 - TR primar</value>
   </data>
   <data name="SYS - TV1 - TR Secondary" xml:space="preserve">
-    <value>Sys - TV1 - TR secundar</value>
+    <value>SYS - TV1 - TR secundar</value>
   </data>
   <data name="OVERLOAD ANALOG INPUT" xml:space="preserve">
     <value>Suprasarcină intrare analogică</value>
@@ -5990,5 +5990,155 @@
   </data>
   <data name="MINIMUM TEMPERATURE FOR PROCESS" xml:space="preserve">
     <value>Temperatura minimă pentru proces</value>
+  </data>
+  <data name="NO REVERSE FOR TIME" xml:space="preserve">
+    <value>Fără invers pentru timp</value>
+  </data>
+  <data name="REVERSE FOR MAXIMUM FORWARD TIME" xml:space="preserve">
+    <value>Invers pentru timpul maxim înainte</value>
+  </data>
+  <data name="EXTERNAL PUMP NOT RUNNING" xml:space="preserve">
+    <value>Pompa externă care nu funcționează</value>
+  </data>
+  <data name="NOT RESTARTING" xml:space="preserve">
+    <value>Nu reporniți</value>
+  </data>
+  <data name="RESTART CYCLE IN PROGRESS" xml:space="preserve">
+    <value>Reporniți ciclul în curs</value>
+  </data>
+  <data name="WATER TREATMENT" xml:space="preserve">
+    <value>Tratamentul apei</value>
+  </data>
+  <data name="EXTERNAL WATER COLLECTOR/TRATMENT NOT OK" xml:space="preserve">
+    <value>Colector de apă extern/tratare nu OK</value>
+  </data>
+  <data name="PRODUCTION SPEED WITH LEVEL &gt;= MAXIMUM" xml:space="preserve">
+    <value>Viteza de producție cu nivel&gt; = maxim</value>
+  </data>
+  <data name="PRODUCTION SPEED WITH LEVEL &lt; MAXIMUM" xml:space="preserve">
+    <value>Viteza de producție cu nivel &lt;maxim</value>
+  </data>
+  <data name="HIGH LEVEL" xml:space="preserve">
+    <value>Nivel inalt</value>
+  </data>
+  <data name="PIT EMPTY" xml:space="preserve">
+    <value>Groapă goală</value>
+  </data>
+  <data name="PIT NOT FULL" xml:space="preserve">
+    <value>Groapa nu este plină</value>
+  </data>
+  <data name="PIT FULL" xml:space="preserve">
+    <value>Groapă plină</value>
+  </data>
+  <data name="PIT NOT EMPTY" xml:space="preserve">
+    <value>Groapa nu este goală</value>
+  </data>
+  <data name="DOWNSTREAM SAFETY NOT OK TO" xml:space="preserve">
+    <value>Siguranța din aval nu este ok până la</value>
+  </data>
+  <data name="LEVEL OK FOR PROCESS" xml:space="preserve">
+    <value>Nivel OK pentru proces</value>
+  </data>
+  <data name="SEPARATION TANK LEVEL NOT OK FOR RUN" xml:space="preserve">
+    <value>Nivelul rezervorului de separare nu este OK pentru alergare</value>
+  </data>
+  <data name="SEPARATION TANK REFILL SPEED" xml:space="preserve">
+    <value>Viteza de reumplere a rezervorului de separare</value>
+  </data>
+  <data name="PREPARATION SPEED" xml:space="preserve">
+    <value>Viteza de preparare</value>
+  </data>
+  <data name="CONTROL MODE" xml:space="preserve">
+    <value>Modul de control</value>
+  </data>
+  <data name="AUTO" xml:space="preserve">
+    <value>Auto</value>
+  </data>
+  <data name="SEMI-AUTO" xml:space="preserve">
+    <value>Semi auto</value>
+  </data>
+  <data name="NO CONTINUOUS FILLING" xml:space="preserve">
+    <value>Fără umplutură continuă</value>
+  </data>
+  <data name="DOWNSTREAM NOT OK - FILLING MODE CONTINUOUS" xml:space="preserve">
+    <value>În aval nu este OK - modul de umplere continuu</value>
+  </data>
+  <data name="NO LEVEL-STEP FILLING" xml:space="preserve">
+    <value>Fără umplutură la nivel în trepte</value>
+  </data>
+  <data name="DOWNSTREAM NOT OK - FILLING MODE STEP AT LEVEL" xml:space="preserve">
+    <value>Aval nu este OK - Mod de umplere pas la nivel</value>
+  </data>
+  <data name="EXIT LEVEL OK" xml:space="preserve">
+    <value>Nivel de ieșire OK</value>
+  </data>
+  <data name="BUFFER EXIT LEVEL NOT OK" xml:space="preserve">
+    <value>Nivelul de ieșire tampon nu OK</value>
+  </data>
+  <data name="BUFFER OK FOR LOADING" xml:space="preserve">
+    <value>Tampon ok pentru încărcare</value>
+  </data>
+  <data name="BUFFER BELT ENABLED" xml:space="preserve">
+    <value>Centura tampon activată</value>
+  </data>
+  <data name="BUFFER BELT NOT ENABLED" xml:space="preserve">
+    <value>Centura tampon nu este activată</value>
+  </data>
+  <data name="OPERATING MODE OPTIONS" xml:space="preserve">
+    <value>Opțiuni mod de operare</value>
+  </data>
+  <data name="CONTINUOUS MODE" xml:space="preserve">
+    <value>Modul continuu</value>
+  </data>
+  <data name="STEP FORWARD AT MAXIMUM LEVEL" xml:space="preserve">
+    <value>Pas înainte la nivel maxim</value>
+  </data>
+  <data name="STOP IF DOWNSTREAM OFF" xml:space="preserve">
+    <value>Opriți -vă dacă în aval</value>
+  </data>
+  <data name="STOP BUFFER DISCHARGE" xml:space="preserve">
+    <value>Opriți descărcarea tamponului</value>
+  </data>
+  <data name="RESTART BUFFER DISCHARGE" xml:space="preserve">
+    <value>Reporniți descărcarea tamponului</value>
+  </data>
+  <data name="EMPTY LEVEL FOR BUFFER FILLING MODE" xml:space="preserve">
+    <value>Nivel gol pentru modul de umplere tampon</value>
+  </data>
+  <data name="LOADING DEVICE STATUS OK (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Starea dispozitivului de încărcare OK (semnal extern)</value>
+  </data>
+  <data name="(1=EXT DEVICE STATUS OK)" xml:space="preserve">
+    <value>(1 = starea dispozitivului Ext ok)</value>
+  </data>
+  <data name="LOADING DEVICE RUNNING (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Dispozitiv de încărcare care rulează (semnal extern)</value>
+  </data>
+  <data name="(1=EXT DEVICE RUNNING)" xml:space="preserve">
+    <value>(1 = Ext dispozitiv care rulează)</value>
+  </data>
+  <data name="SOREMA IS OK TO RECEIVE MATERIAL" xml:space="preserve">
+    <value>Sorema este în regulă să primească material</value>
+  </data>
+  <data name="EXTERNAL LOADING DEVICE IS NOT OK" xml:space="preserve">
+    <value>Dispozitivul de încărcare extern nu este OK</value>
+  </data>
+  <data name="EXTERNAL LOADING IS NOT RUNNING" xml:space="preserve">
+    <value>Încărcarea externă nu funcționează</value>
+  </data>
+  <data name="EXT LOADING ON" xml:space="preserve">
+    <value>Ext încărcat pe</value>
+  </data>
+  <data name="SYS - BEACON - LAMP ALARM" xml:space="preserve">
+    <value>SYS - Beacon - Alarma lămpii</value>
+  </data>
+  <data name="SYS - BEACON - SIREN" xml:space="preserve">
+    <value>SYS - Beacon - Siren</value>
+  </data>
+  <data name="SYS - BEACON - LAMP PRODUCTION" xml:space="preserve">
+    <value>SYS - Beacon - Producția de lămpi</value>
+  </data>
+  <data name="SYS - BEACON - LAMP WARNING" xml:space="preserve">
+    <value>SYS - Beacon - LAMPER AVERTIZARE</value>
   </data>
 </root>
