--- a/Prevu.Localization/Properties/Resources.zh.resx
+++ b/Prevu.Localization/Properties/Resources.zh.resx
@@ -1843,7 +1843,7 @@
     <value>Estop 区域未复位（所有 Estop Pbs 正常）</value>
   </data>
   <data name="SYS - E-STOP - MASTER RELAY STATUS" xml:space="preserve">
-    <value>Sys - E-Stop - 主继电器状态</value>
+    <value>SYS - E-Stop - 主继电器状态</value>
   </data>
   <data name="OK FOR PROCESS (ESTOP AREA STATUS OK + NO ALARMS/MESSAGES)" xml:space="preserve">
     <value>过程正常（Estop 区域状态正常 + 无警报/消息）</value>
@@ -5990,5 +5990,155 @@
   </data>
   <data name="MINIMUM TEMPERATURE FOR PROCESS" xml:space="preserve">
     <value>过程的最低温度</value>
+  </data>
+  <data name="NO REVERSE FOR TIME" xml:space="preserve">
+    <value>时间没有反向</value>
+  </data>
+  <data name="REVERSE FOR MAXIMUM FORWARD TIME" xml:space="preserve">
+    <value>逆转最大前进时间</value>
+  </data>
+  <data name="EXTERNAL PUMP NOT RUNNING" xml:space="preserve">
+    <value>外部泵不运行</value>
+  </data>
+  <data name="NOT RESTARTING" xml:space="preserve">
+    <value>不重新启动</value>
+  </data>
+  <data name="RESTART CYCLE IN PROGRESS" xml:space="preserve">
+    <value>重新启动周期</value>
+  </data>
+  <data name="WATER TREATMENT" xml:space="preserve">
+    <value>水处理</value>
+  </data>
+  <data name="EXTERNAL WATER COLLECTOR/TRATMENT NOT OK" xml:space="preserve">
+    <value>外部水收集器/tratement不正常</value>
+  </data>
+  <data name="PRODUCTION SPEED WITH LEVEL &gt;= MAXIMUM" xml:space="preserve">
+    <value>级别的生产速度&gt; =最大</value>
+  </data>
+  <data name="PRODUCTION SPEED WITH LEVEL &lt; MAXIMUM" xml:space="preserve">
+    <value>级别的生产速度&lt;最大</value>
+  </data>
+  <data name="HIGH LEVEL" xml:space="preserve">
+    <value>高水平</value>
+  </data>
+  <data name="PIT EMPTY" xml:space="preserve">
+    <value>坑空</value>
+  </data>
+  <data name="PIT NOT FULL" xml:space="preserve">
+    <value>坑不饱满</value>
+  </data>
+  <data name="PIT FULL" xml:space="preserve">
+    <value>坑满</value>
+  </data>
+  <data name="PIT NOT EMPTY" xml:space="preserve">
+    <value>坑不是空的</value>
+  </data>
+  <data name="DOWNSTREAM SAFETY NOT OK TO" xml:space="preserve">
+    <value>下游安全不可行</value>
+  </data>
+  <data name="LEVEL OK FOR PROCESS" xml:space="preserve">
+    <value>级别确定以进行进程</value>
+  </data>
+  <data name="SEPARATION TANK LEVEL NOT OK FOR RUN" xml:space="preserve">
+    <value>分离坦克级别不可行</value>
+  </data>
+  <data name="SEPARATION TANK REFILL SPEED" xml:space="preserve">
+    <value>分离罐补充速度</value>
+  </data>
+  <data name="PREPARATION SPEED" xml:space="preserve">
+    <value>准备速度</value>
+  </data>
+  <data name="CONTROL MODE" xml:space="preserve">
+    <value>控制模式</value>
+  </data>
+  <data name="AUTO" xml:space="preserve">
+    <value>汽车</value>
+  </data>
+  <data name="SEMI-AUTO" xml:space="preserve">
+    <value>半自动</value>
+  </data>
+  <data name="NO CONTINUOUS FILLING" xml:space="preserve">
+    <value>没有连续的填充</value>
+  </data>
+  <data name="DOWNSTREAM NOT OK - FILLING MODE CONTINUOUS" xml:space="preserve">
+    <value>下游不正常 - 填充模式连续</value>
+  </data>
+  <data name="NO LEVEL-STEP FILLING" xml:space="preserve">
+    <value>没有级别的填充</value>
+  </data>
+  <data name="DOWNSTREAM NOT OK - FILLING MODE STEP AT LEVEL" xml:space="preserve">
+    <value>下游不正常 - 级别的填充模式步骤</value>
+  </data>
+  <data name="EXIT LEVEL OK" xml:space="preserve">
+    <value>退出级别可以</value>
+  </data>
+  <data name="BUFFER EXIT LEVEL NOT OK" xml:space="preserve">
+    <value>缓冲区退出级别不正常</value>
+  </data>
+  <data name="BUFFER OK FOR LOADING" xml:space="preserve">
+    <value>缓冲区可以加载</value>
+  </data>
+  <data name="BUFFER BELT ENABLED" xml:space="preserve">
+    <value>启用缓冲带</value>
+  </data>
+  <data name="BUFFER BELT NOT ENABLED" xml:space="preserve">
+    <value>缓冲带未启用</value>
+  </data>
+  <data name="OPERATING MODE OPTIONS" xml:space="preserve">
+    <value>操作模式选项</value>
+  </data>
+  <data name="CONTINUOUS MODE" xml:space="preserve">
+    <value>连续模式</value>
+  </data>
+  <data name="STEP FORWARD AT MAXIMUM LEVEL" xml:space="preserve">
+    <value>向前迈进</value>
+  </data>
+  <data name="STOP IF DOWNSTREAM OFF" xml:space="preserve">
+    <value>如果下游停止</value>
+  </data>
+  <data name="STOP BUFFER DISCHARGE" xml:space="preserve">
+    <value>停止缓冲液排放</value>
+  </data>
+  <data name="RESTART BUFFER DISCHARGE" xml:space="preserve">
+    <value>重新启动缓冲液排放</value>
+  </data>
+  <data name="EMPTY LEVEL FOR BUFFER FILLING MODE" xml:space="preserve">
+    <value>缓冲区填充模式的空级别</value>
+  </data>
+  <data name="LOADING DEVICE STATUS OK (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>加载设备状态确定（外部信号）</value>
+  </data>
+  <data name="(1=EXT DEVICE STATUS OK)" xml:space="preserve">
+    <value>（1 = Ext设备状态确定）</value>
+  </data>
+  <data name="LOADING DEVICE RUNNING (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>加载设备运行（外部信号）</value>
+  </data>
+  <data name="(1=EXT DEVICE RUNNING)" xml:space="preserve">
+    <value>（1 = Ext设备运行）</value>
+  </data>
+  <data name="SOREMA IS OK TO RECEIVE MATERIAL" xml:space="preserve">
+    <value>Sorema可以接收材料</value>
+  </data>
+  <data name="EXTERNAL LOADING DEVICE IS NOT OK" xml:space="preserve">
+    <value>外部加载设备不正常</value>
+  </data>
+  <data name="EXTERNAL LOADING IS NOT RUNNING" xml:space="preserve">
+    <value>外部加载不运行</value>
+  </data>
+  <data name="EXT LOADING ON" xml:space="preserve">
+    <value>Ext Loading On</value>
+  </data>
+  <data name="SYS - BEACON - LAMP ALARM" xml:space="preserve">
+    <value>SYS-信标 - 灯警报</value>
+  </data>
+  <data name="SYS - BEACON - SIREN" xml:space="preserve">
+    <value>SYS-信标 - 警笛</value>
+  </data>
+  <data name="SYS - BEACON - LAMP PRODUCTION" xml:space="preserve">
+    <value>SYS-信标 - 灯泡生产</value>
+  </data>
+  <data name="SYS - BEACON - LAMP WARNING" xml:space="preserve">
+    <value>SYS-信标 - 灯警告</value>
   </data>
 </root>
